功能:语言包更新

--- a/app/src/main/res/values-es/strings.xml
+++ b/app/src/main/res/values-es/strings.xml
@@ -134,7 +134,6 @@
     <string name="DEVICE_OFFLINE5">Configure WiFi para el dispositivo</string>
     <string name="DEVICE_OFFLINE6">No hay WiFi disponible</string>
     <string name="DEVICE_OFFLINE7">Por favor, conecte los puntos calientes del equipo</string>
-    <string name="DEVICE_SHARE_LIMIT_TIPS">El número de límite de cuota alcanzado</string>
     <string name="DEVICE_UPGRADE">mejoras de equipo</string>
     <string name="DEVICE_UPGRADE_TIPS">El dispositivo debe ser de rebote para actualizar el software.</string>
     <string name="DEVICE_WIFI_ONLINE">WiFionline</string>
@@ -241,6 +240,9 @@
     <string name="EVERY_DAY">Cada día</string>
     <string name="EXPECT">Estrena pronto, espere por favor</string>
     <string name="EXPERIENCE">Experimentar</string>
+    <string name="FAQ_SINA_WEIBO">No es compatible con Sina Weibo live video</string>
+    <string name="FAQ_SINA_WEIBO_TEXT1">1, para asegurarse de que la cuenta tiene la autenticación de nombre real de Weibo de Sina, y no es una cuenta de lista negra.</string>
+    <string name="FAQ_SINA_WEIBO_TEXT2">2, el actual Sina vivo sólo apoyo IP de China continental.</string>
     <string name="FEEDBACK">Enviar sugerencias</string>
     <string name="FEEDBACK_Copy">Copia</string>
     <string name="FEEDBACK_NULL">Introduzca la realimentación</string>
@@ -275,9 +277,18 @@
     <string name="H5_VR_mode">Modo VR</string>
     <string name="HOME">Página de inicio</string>
     <string name="HOTSPOTS_CONNECT_TIMEOUT_TIPS">No se puede conectar a puntos de acceso</string>
+    <string name="HOTSPOT_CONNECT_FAILED">Se ha producido un error en la conexión.</string>
+    <string name="HOTSPOT_DEFAULT">Cam&#8211;Hotspot</string>
+    <string name="HOTSPOT_DEVICE_CONNECTING">Conexión del dispositivo</string>
     <string name="HOTSPOT_NAME">Hotspot: %s</string>
+    <string name="HOTSPOT_NEME_HINT">Introduzca un nombre de zona activa</string>
+    <string name="HOTSPOT_NOTAUTO_OPEN_POP">El sistema actual no admite la apertura automática de los hot spots, ya sea para ir a los \"ajustes\" para abrir manualmente?</string>
+    <string name="HOTSPOT_OPENING">Hotspot de apertura</string>
+    <string name="HOTSPOT_OPEN_TIPS">Para asegurar que el dispositivo funcione correctamente, abra la red de datos móviles, sí?</string>
     <string name="HOTSPOT_PASSWORD">Introduzca la contraseña del punto de acceso</string>
     <string name="HOTSPOT_PASSWORD_ERROR">La contraseña debe tener al menos 8 caracteres</string>
+    <string name="HOTSPOT_PSW_HINT">Introduzca la contraseña del punto de acceso</string>
+    <string name="HOTSPOT_UNABLE_OPEN_POP">No puede abrir temporalmente puntos de acceso de forma automática si el sistema va a \"Configuración\" para abrir manualmente?</string>
     <string name="HOUR">H</string>
     <string name="HOURS">Notificación de 24h</string>
     <string name="HZ_NTSC_PAL">Abrir NTSC</string>
@@ -322,9 +333,12 @@
     <string name="LIVE_ACCOUNT_BIND_TIPS">Por favor, vincule una cuenta primero</string>
     <string name="LIVE_ACCOUNT_UNBOUND">Sin consolidar</string>
     <string name="LIVE_ADDRESS_EXPIRED">La dirección activa ha caducado</string>
+    <string name="LIVE_AUTHO_FAILED">Autorización fallida</string>
     <string name="LIVE_CHANNEL_CREATING_LOADING">Creando &#8230;</string>
+    <string name="LIVE_COPY_LINK">copiar link</string>
     <string name="LIVE_CREATE_BUTTON">Crear en vivo</string>
     <string name="LIVE_CREATE_FAIL_TIPS">Crear error</string>
+    <string name="LIVE_CREATE_NEW_LIVE">Crear un nuevo live, invalidará la actual dirección en vivo, continuar?</string>
     <string name="LIVE_CREATE_TIPS">Por favor, cree primero una emisión en directo</string>
     <string name="LIVE_CREATING">Creando %s en vivo &#8230;</string>
     <string name="LIVE_CURRENT_TEXT">Actual en vivo</string>
@@ -334,6 +348,7 @@
     <string name="LIVE_DETAIL_DEL_END_TIME">Eliminar hora de finalización</string>
     <string name="LIVE_DETAIL_DESCRIPTION">Descripción de Live</string>
     <string name="LIVE_DETAIL_TITLE">Título en vivo</string>
+    <string name="LIVE_FACEBOOK_PERMISSIONS">Permisos</string>
     <string name="LIVE_FAILED">Debido a problemas de dirección o de red, falló en vivo</string>
     <string name="LIVE_LANMODE_POP">¿No es compatible con Live, cambia a \"Conectarse a WiFi\" o \"Hotspot\"?</string>
     <string name="LIVE_NOT_OPENED_POP">La cuenta de YouTube %s aún no ha abierto el canal, no puede vivir, abre y vuelve a intentarlo</string>
@@ -341,12 +356,17 @@
     <string name="LIVE_PLATFORM_FACEBOOK">Facebook</string>
     <string name="LIVE_PLATFORM_WEIBO">Sina Weibo</string>
     <string name="LIVE_PLATFORM_YOUTUBE">Youtube</string>
+    <string name="LIVE_RTMP_ENTER_KEY">Introduzca la clave</string>
     <string name="LIVE_RTMP_HINT">rtmp://</string>
+    <string name="LIVE_SAVE_FAILED">Se ha producido un error al guardar.</string>
     <string name="LIVE_SELECT_PLATFORM">Seleccione una plataforma en vivo</string>
+    <string name="LIVE_SINAWEIBO_UNABLE_LIVE">Esta cuenta está temporalmente incapacitada para vivir, ya sea para ir a FAQ para obtener más información?</string>
+    <string name="LIVE_SINAWEIBO_UNCERTIFICATED">Cuenta sin certificado, por favor, ir al final del Sina Weibo haga clic en \"+\" > \"live\" por pasos para completar la verificación</string>
     <string name="LIVE_SLOW_CONNECTION">Conexión lenta, no puede reproducir video en vivo, cambiar de velocidad o intentar de nuevo en un entorno de red mejor.</string>
     <string name="LIVE_STOP_POP">Después de la parada, la dirección en vivo será inválida, si para detener?</string>
     <string name="LIVE_TESTING">Prueba de web en vivo &#8230;</string>
     <string name="LIVE_TIME_ERROR_TIPS">La hora de inicio debe ser anterior a la hora de finalización</string>
+    <string name="LIVE_UNABLE_UNBIND">El actual %1$s use %2$s login, temporalmente incapaz de desvincular la cuenta</string>
     <string name="LIVE_UNBIND_ACCOUNT">¿Desvincular %s cuenta o no?</string>
     <string name="LOADING">Cargando&#8230;</string>
     <string name="LOCAL_NOTIFICATION_AndroidMSG">Busque en el Phone \"%s\" en la página de \"Aviso&#8211;&#8211;Ajuste\" y elija \"permitir la notificación\"</string>
@@ -606,6 +626,7 @@
     <string name="SETTING">Ajustando&#8230;</string>
     <string name="SETTINGS">Ajustes</string>
     <string name="SETTINGS_1">Ajustes</string>
+    <string name="SETTINGS_HOTSPOT_CONNECTED">Hotspot está conectado</string>
     <string name="SETTINGS_MOBILE_HOTSPOT">Punto de acceso móvil</string>
     <string name="SETTINGS_Wechat_Switch_Cancel">Al cerrar no podrá recibir mensajes de WeChat. Para desenlazar va a WeChat para dejar de seguir la cuenta de suscripción de Servicio Oficial de Clever Dog.</string>
     <string name="SETTINGS_Wechat_Switch_Open">Por favor, enfóquese en la cuenta de WeChat \"加菲狗官微服务\" y vincule, después del éxito de la antigua cuenta de WeChat ya no recibirá el mensaje push</string>
