--- a/app/src/main/res/values-fr/strings.xml
+++ b/app/src/main/res/values-fr/strings.xml
@@ -134,7 +134,6 @@
     <string name="DEVICE_OFFLINE5">Configurez le WiFi pour le périphérique</string>
     <string name="DEVICE_OFFLINE6">Pas de WiFi disponible</string>
     <string name="DEVICE_OFFLINE7">Veuillez brancher les points chauds de l\'équipement</string>
-    <string name="DEVICE_SHARE_LIMIT_TIPS">Le nombre de limites d\'actions atteint</string>
     <string name="DEVICE_UPGRADE">Mise à jour</string>
     <string name="DEVICE_UPGRADE_TIPS">Le dispositif doit être rebondir à mettre à jour le logiciel.</string>
     <string name="DEVICE_WIFI_ONLINE">Connecté au Wifi</string>
@@ -241,6 +240,9 @@
     <string name="EVERY_DAY">Tous les jours</string>
     <string name="EXPECT">Attendre</string>
     <string name="EXPERIENCE">Expérience</string>
+    <string name="FAQ_SINA_WEIBO">Ne prenez pas en charge la vidéo en direct de Sina Weibo</string>
+    <string name="FAQ_SINA_WEIBO_TEXT1">1, pour s\'assurer que le compte possède l\'authentification du nom réel du nom de Sina et n\'est pas un compte de la liste noire.</string>
+    <string name="FAQ_SINA_WEIBO_TEXT2">2, l\'actuel Sina Live ne supporte que la Chine continentale IP.</string>
     <string name="FEEDBACK">Suggestions</string>
     <string name="FEEDBACK_Copy">Copie</string>
     <string name="FEEDBACK_NULL">Saisir vos commentaires</string>
@@ -275,9 +277,18 @@
     <string name="H5_VR_mode">Mode VR</string>
     <string name="HOME">Accueil</string>
     <string name="HOTSPOTS_CONNECT_TIMEOUT_TIPS">Impossible de se connecter à des points chauds</string>
+    <string name="HOTSPOT_CONNECT_FAILED">La connexion a échoué, réessayez</string>
+    <string name="HOTSPOT_DEFAULT">Cam&#8211;Hotspot</string>
+    <string name="HOTSPOT_DEVICE_CONNECTING">Connexion de périphérique</string>
     <string name="HOTSPOT_NAME">Hotspot: %s</string>
+    <string name="HOTSPOT_NEME_HINT">Entrez un nom de point chaud</string>
+    <string name="HOTSPOT_NOTAUTO_OPEN_POP">Le système actuel ne supporte pas l\'ouverture automatique des points chauds, que ce soit pour passer aux \"réglages\" ouverts manuellement?</string>
+    <string name="HOTSPOT_OPENING">Hotspot d\'ouverture</string>
+    <string name="HOTSPOT_OPEN_TIPS">Pour s\'assurer que l\'appareil fonctionne correctement, ouvrez le réseau de données mobile, oui?</string>
     <string name="HOTSPOT_PASSWORD">Entrez le mot de passe du mot de passe</string>
     <string name="HOTSPOT_PASSWORD_ERROR">Mot de passe doit être d\'au moins 8 caractères</string>
+    <string name="HOTSPOT_PSW_HINT">Entrez le mot de passe du mot de passe</string>
+    <string name="HOTSPOT_UNABLE_OPEN_POP">Impossible d\'ouvrir automatiquement les points chauds, que le système passe à \"Paramètres\" pour ouvrir manuellement?</string>
     <string name="HOUR">H</string>
     <string name="HOURS">24 heures sur 24</string>
     <string name="HZ_NTSC_PAL">Activer NTSC</string>
@@ -322,9 +333,12 @@
     <string name="LIVE_ACCOUNT_BIND_TIPS">Veuillez lier un compte d\'abord</string>
     <string name="LIVE_ACCOUNT_UNBOUND">Non lié</string>
     <string name="LIVE_ADDRESS_EXPIRED">L\'adresse Live a expiré</string>
+    <string name="LIVE_AUTHO_FAILED">L\'autorisation à échouée</string>
     <string name="LIVE_CHANNEL_CREATING_LOADING">Création &#8230;</string>
+    <string name="LIVE_COPY_LINK">Copier le lien</string>
     <string name="LIVE_CREATE_BUTTON">Créer en direct</string>
     <string name="LIVE_CREATE_FAIL_TIPS">Créer un échec</string>
+    <string name="LIVE_CREATE_NEW_LIVE">Créer un nouveau live, invalidera l\'adresse en direct, continuez&#8211;vous?</string>
     <string name="LIVE_CREATE_TIPS">Créez une diffusion en direct d\'abord</string>
     <string name="LIVE_CREATING">Créer %s en direct &#8230;</string>
     <string name="LIVE_CURRENT_TEXT">En direct en direct</string>
@@ -334,6 +348,7 @@
     <string name="LIVE_DETAIL_DEL_END_TIME">Supprimer l\'heure de fin</string>
     <string name="LIVE_DETAIL_DESCRIPTION">Description en direct</string>
     <string name="LIVE_DETAIL_TITLE">Titre en direct</string>
+    <string name="LIVE_FACEBOOK_PERMISSIONS">Autorisations</string>
     <string name="LIVE_FAILED">En raison de problèmes d\'adresse ou de réseau, en direct ont échoué</string>
     <string name="LIVE_LANMODE_POP">Ne prenez pas en charge Live, passez à \"Se connecter à WiFi\" ou \"Hotspot\"?</string>
     <string name="LIVE_NOT_OPENED_POP">Le compte YouTube %s n\'a pas encore ouvert le canal, ne peut pas vivre, ouvrez et réessayez</string>
@@ -341,12 +356,17 @@
     <string name="LIVE_PLATFORM_FACEBOOK">Facebook</string>
     <string name="LIVE_PLATFORM_WEIBO">Sina Weibo</string>
     <string name="LIVE_PLATFORM_YOUTUBE">Youtube</string>
+    <string name="LIVE_RTMP_ENTER_KEY">Entrez la clé</string>
     <string name="LIVE_RTMP_HINT">rtmp://</string>
+    <string name="LIVE_SAVE_FAILED">Enregistrer échoué, réessayez</string>
     <string name="LIVE_SELECT_PLATFORM">Sélectionnez une plate&#8211;forme en direct</string>
+    <string name="LIVE_SINAWEIBO_UNABLE_LIVE">Ce compte est temporairement incapable de vivre, que ce soit pour passer des FAQ pour en savoir plus?</string>
+    <string name="LIVE_SINAWEIBO_UNCERTIFICATED">Compte non certifié, passez au bas du micro&#8211;blog, cliquez sur \"+\" > \"en direct\" par étapes pour terminer la vérification</string>
     <string name="LIVE_SLOW_CONNECTION">Une connexion lente, ne peut pas lire la vidéo en direct, passer le taux, ou réessayer dans un meilleur environnement de réseau.</string>
     <string name="LIVE_STOP_POP">Après l\'arrêt, l\'adresse en direct sera invalide, que ce soit pour arrêter?</string>
     <string name="LIVE_TESTING">Test de web en direct &#8230;</string>
     <string name="LIVE_TIME_ERROR_TIPS">L\'heure de début doit être antérieure à la fin de l\'heure</string>
+    <string name="LIVE_UNABLE_UNBIND">L\' actuel %1$s utilise %2$s login, temporairement incapable de débloquer le compte</string>
     <string name="LIVE_UNBIND_ACCOUNT">Débarrassez&#8211;vous le compte %s ou non?</string>
     <string name="LOADING">Chargement&#8230;</string>
     <string name="LOCAL_NOTIFICATION_AndroidMSG">Pour l\'Phone, ouvrir \"Réglages&#8211;notifications\", puis %s et ouvrir \'Notifications\'</string>
@@ -606,6 +626,7 @@
     <string name="SETTING">Installation&#8230;</string>
     <string name="SETTINGS">Réglages</string>
     <string name="SETTINGS_1">Réglages</string>
+    <string name="SETTINGS_HOTSPOT_CONNECTED">Hotspot est connecté</string>
     <string name="SETTINGS_MOBILE_HOTSPOT">Point d\'accès pour mobiles</string>
     <string name="SETTINGS_Wechat_Switch_Cancel">Vous ne pouvez recevoir plus les messages poussés de Wechat si vous le fermez.Si vous voulez annuler la liaison, veuillez annuler tout à bord \"加菲狗官微服务\".</string>
     <string name="SETTINGS_Wechat_Switch_Open">Concentrez&#8211;vous sur le compte WeChat \"加菲狗官微服务\" et liez, après que le succès de l\'ancien compte WeChat ne recevra plus le message push</string>
