--- a/app/src/main/res/values-in-rID/strings.xml
+++ b/app/src/main/res/values-in-rID/strings.xml
@@ -134,7 +134,6 @@
     <string name="DEVICE_OFFLINE5">Konfigurasikan WiFi untuk perangkat</string>
     <string name="DEVICE_OFFLINE6">WiFi tidak tersedia</string>
     <string name="DEVICE_OFFLINE7">Tolong hubungkan peralatan hot spot</string>
-    <string name="DEVICE_SHARE_LIMIT_TIPS">Jumlah batas saham tercapai</string>
     <string name="DEVICE_UPGRADE">Tingkatkan perangkat</string>
     <string name="DEVICE_UPGRADE_TIPS">Perangkat harus pulih untuk memperbarui perangkat lunak.</string>
     <string name="DEVICE_WIFI_ONLINE">WIFI&#8211;Online</string>
@@ -241,6 +240,9 @@
     <string name="EVERY_DAY">Setiap hari</string>
     <string name="EXPECT">Segera hadir</string>
     <string name="EXPERIENCE">Pengalaman</string>
+    <string name="FAQ_SINA_WEIBO">Jangan mendukung Sina Weibo live video</string>
+    <string name="FAQ_SINA_WEIBO_TEXT1">1, untuk memastikan bahwa akun tersebut memiliki autentikasi nama asli Sina Weibo, dan bukan akun daftar hitam.</string>
+    <string name="FAQ_SINA_WEIBO_TEXT2">2, Sina saat ini tinggal hanya mendukung IP daratan China.</string>
     <string name="FEEDBACK">Saran</string>
     <string name="FEEDBACK_Copy">Salinan</string>
     <string name="FEEDBACK_NULL">Silahkan isi masukan</string>
@@ -275,9 +277,18 @@
     <string name="H5_VR_mode">Mode VR</string>
     <string name="HOME">Rumah</string>
     <string name="HOTSPOTS_CONNECT_TIMEOUT_TIPS">Tidak dapat terhubung ke hotspot</string>
+    <string name="HOTSPOT_CONNECT_FAILED">Sambungan gagal, coba lagi</string>
+    <string name="HOTSPOT_DEFAULT">Cam&#8211;Hotspot</string>
+    <string name="HOTSPOT_DEVICE_CONNECTING">Penghubung perangkat</string>
     <string name="HOTSPOT_NAME">Hotspot: %s</string>
+    <string name="HOTSPOT_NEME_HINT">Harap masukkan nama hotspot</string>
+    <string name="HOTSPOT_NOTAUTO_OPEN_POP">Sistem saat ini tidak mendukung pembukaan hot spot secara otomatis, apakah akan masuk ke \"setting\" untuk membuka secara manual?</string>
+    <string name="HOTSPOT_OPENING">Membuka hotspot</string>
+    <string name="HOTSPOT_OPEN_TIPS">Untuk memastikan perangkat bekerja dengan benar, buka jaringan data seluler ya?</string>
     <string name="HOTSPOT_PASSWORD">Harap masukkan kata sandi hotspot</string>
     <string name="HOTSPOT_PASSWORD_ERROR">Password harus minimal 8 karakter</string>
+    <string name="HOTSPOT_PSW_HINT">Harap masukkan kata sandi hotspot</string>
+    <string name="HOTSPOT_UNABLE_OPEN_POP">Untuk sementara tidak dapat membuka hotspot secara otomatis, apakah sistem masuk ke \"Settings\" untuk membuka secara manual?</string>
     <string name="HOUR">Jam</string>
     <string name="HOURS">24 jam</string>
     <string name="HZ_NTSC_PAL">Mulai NTSC</string>
@@ -322,9 +333,12 @@
     <string name="LIVE_ACCOUNT_BIND_TIPS">Harap lampirkan akun terlebih dulu</string>
     <string name="LIVE_ACCOUNT_UNBOUND">Tidak terikat</string>
     <string name="LIVE_ADDRESS_EXPIRED">Alamat langsung telah kedaluwarsa</string>
+    <string name="LIVE_AUTHO_FAILED">Otorisasi gagal</string>
     <string name="LIVE_CHANNEL_CREATING_LOADING">Menciptakan &#8230;</string>
+    <string name="LIVE_COPY_LINK">Salin tautan</string>
     <string name="LIVE_CREATE_BUTTON">Buat hidup</string>
     <string name="LIVE_CREATE_FAIL_TIPS">Buat gagal</string>
+    <string name="LIVE_CREATE_NEW_LIVE">Buat live baru, akan membatalkan alamat aktif saat ini, lanjutkan?</string>
     <string name="LIVE_CREATE_TIPS">Silahkan membuat siaran langsung terlebih dahulu</string>
     <string name="LIVE_CREATING">Membuat %s live &#8230;</string>
     <string name="LIVE_CURRENT_TEXT">Hidup saat ini</string>
@@ -334,6 +348,7 @@
     <string name="LIVE_DETAIL_DEL_END_TIME">Hapus waktu akhir</string>
     <string name="LIVE_DETAIL_DESCRIPTION">Deskripsi langsung</string>
     <string name="LIVE_DETAIL_TITLE">Judul langsung</string>
+    <string name="LIVE_FACEBOOK_PERMISSIONS">Izin</string>
     <string name="LIVE_FAILED">Karena masalah alamat atau jaringan, hidup gagal</string>
     <string name="LIVE_LANMODE_POP">Tidak mendukung hidup, beralih ke \"Sambungkan ke WiFi\" atau \"Hotspot\"?</string>
     <string name="LIVE_NOT_OPENED_POP">Account YouTube %s belum membuka saluran, tidak bisa hidup, silahkan buka dan coba lagi</string>
@@ -341,12 +356,17 @@
     <string name="LIVE_PLATFORM_FACEBOOK">Facebook</string>
     <string name="LIVE_PLATFORM_WEIBO">Sina Weibo</string>
     <string name="LIVE_PLATFORM_YOUTUBE">Youtube</string>
+    <string name="LIVE_RTMP_ENTER_KEY">Masukkan kunci</string>
     <string name="LIVE_RTMP_HINT">rtmp://</string>
+    <string name="LIVE_SAVE_FAILED">Simpan gagal, coba lagi</string>
     <string name="LIVE_SELECT_PLATFORM">Pilih platform langsung</string>
+    <string name="LIVE_SINAWEIBO_UNABLE_LIVE">Akun ini sementara tidak dapat hidup, apakah akan pergi FAQ untuk belajar lebih banyak?</string>
+    <string name="LIVE_SINAWEIBO_UNCERTIFICATED">Akun yang tidak diketahui, silahkan masuk ke bagian bawah blog mikro klik \"+\" > \"live\" dengan langkah&#8211;langkah untuk menyelesaikan verifikasi</string>
     <string name="LIVE_SLOW_CONNECTION">Koneksi lambat, tidak bisa memutar live video, beralih rate, atau coba lagi di lingkungan jaringan yang lebih baik.</string>
     <string name="LIVE_STOP_POP">Setelah berhenti, alamat langsung tidak valid, apakah akan berhenti?</string>
     <string name="LIVE_TESTING">Menguji web langsung &#8230;</string>
     <string name="LIVE_TIME_ERROR_TIPS">Waktu mulai harus lebih awal dari waktu akhir</string>
+    <string name="LIVE_UNABLE_UNBIND">Saat ini %1$s menggunakan %2$s login, sementara tidak dapat membatalkan akun</string>
     <string name="LIVE_UNBIND_ACCOUNT">Unbind account %s?</string>
     <string name="LOADING">Loading&#8230;</string>
     <string name="LOCAL_NOTIFICATION_AndroidMSG">Please go to Phone\'s \"Settings\"&#8211;\"Notifications\", find %s and open \'Notifications\'</string>
@@ -606,6 +626,7 @@
     <string name="SETTING">Pengaturan&#8230;</string>
     <string name="SETTINGS">Pengaturan</string>
     <string name="SETTINGS_1">Pengaturan</string>
+    <string name="SETTINGS_HOTSPOT_CONNECTED">Hotspot terhubung</string>
     <string name="SETTINGS_MOBILE_HOTSPOT">Hotspot mobile</string>
     <string name="SETTINGS_Wechat_Switch_Cancel">Jika ditutup, maka tidak bisa menerima dorongan WeChat. Unbinding dengan unfollowing \"加菲狗官微服务\".</string>
     <string name="SETTINGS_Wechat_Switch_Open">Harap fokus pada akun WeChat \"加菲狗官微服务\" dan mengikat, setelah kesuksesan akun WeChat lama tidak akan lagi menerima pesan push.</string>
