--- a/app/src/main/res/values-it/strings.xml
+++ b/app/src/main/res/values-it/strings.xml
@@ -134,7 +134,6 @@
     <string name="DEVICE_OFFLINE5">Configurare WiFi per il dispositivo</string>
     <string name="DEVICE_OFFLINE6">Nessun WiFi disponibile</string>
     <string name="DEVICE_OFFLINE7">Collegare i punti caldi dell\'apparecchiatura</string>
-    <string name="DEVICE_SHARE_LIMIT_TIPS">È stato raggiunto il numero delle azioni</string>
     <string name="DEVICE_UPGRADE">Aggiornamento software dispositivo</string>
     <string name="DEVICE_UPGRADE_TIPS">Il dispositivo deve essere rimbalzo per aggiornare il software.</string>
     <string name="DEVICE_WIFI_ONLINE">WiFi On&#8211;line</string>
@@ -241,6 +240,9 @@
     <string name="EVERY_DAY">Tutti giorni</string>
     <string name="EXPECT">Si prega di aspettare</string>
     <string name="EXPERIENCE">Esperienza</string>
+    <string name="FAQ_SINA_WEIBO">Non supportare il video live di Sina Weibo</string>
+    <string name="FAQ_SINA_WEIBO_TEXT1">1, per assicurarsi che l\'account abbia l\'autenticazione del nome reale di Sina Weibo e non sia un account di liste nere.</string>
+    <string name="FAQ_SINA_WEIBO_TEXT2">2, l\'attuale Sina vivono solo supporto IP Cina continentale.</string>
     <string name="FEEDBACK">Feedback</string>
     <string name="FEEDBACK_Copy">Copia</string>
     <string name="FEEDBACK_NULL">Prego inserire dei contenuti</string>
@@ -275,9 +277,18 @@
     <string name="H5_VR_mode">Modalità VR</string>
     <string name="HOME">Home</string>
     <string name="HOTSPOTS_CONNECT_TIMEOUT_TIPS">Impossibile connettersi agli hotspot</string>
+    <string name="HOTSPOT_CONNECT_FAILED">Connessione non riuscita, riprova</string>
+    <string name="HOTSPOT_DEFAULT">Cam&#8211;Hotspot</string>
+    <string name="HOTSPOT_DEVICE_CONNECTING">Connessione del dispositivo</string>
     <string name="HOTSPOT_NAME">Hotspot: %s</string>
+    <string name="HOTSPOT_NEME_HINT">Inserisci un nome hotspot</string>
+    <string name="HOTSPOT_NOTAUTO_OPEN_POP">Il sistema attuale non supporta l\'apertura automatica dei punti caldi, se si desidera aprire manualmente le \"impostazioni\"?</string>
+    <string name="HOTSPOT_OPENING">Hotspot di apertura</string>
+    <string name="HOTSPOT_OPEN_TIPS">Per garantire che il dispositivo funzioni correttamente, apri la rete dati mobile, sì?</string>
     <string name="HOTSPOT_PASSWORD">Inserisci la password del hotspot</string>
     <string name="HOTSPOT_PASSWORD_ERROR">La password deve essere lunga almeno 8 caratteri</string>
+    <string name="HOTSPOT_PSW_HINT">Inserisci la password del hotspot</string>
+    <string name="HOTSPOT_UNABLE_OPEN_POP">Impossibile temporaneamente aprire automaticamente gli hotspot, se il sistema entra in \"Impostazioni\" per aprire manualmente?</string>
     <string name="HOUR">H</string>
     <string name="HOURS">24 ore</string>
     <string name="HZ_NTSC_PAL">Apri NTSC</string>
@@ -322,9 +333,12 @@
     <string name="LIVE_ACCOUNT_BIND_TIPS">Si prega di legare prima un account</string>
     <string name="LIVE_ACCOUNT_UNBOUND">Unbound</string>
     <string name="LIVE_ADDRESS_EXPIRED">L\'indirizzo live è scaduto</string>
+    <string name="LIVE_AUTHO_FAILED">Autorizzazione fallita</string>
     <string name="LIVE_CHANNEL_CREATING_LOADING">Crea &#8230;</string>
+    <string name="LIVE_COPY_LINK">copia link</string>
     <string name="LIVE_CREATE_BUTTON">Crea Live</string>
     <string name="LIVE_CREATE_FAIL_TIPS">Crea errori</string>
+    <string name="LIVE_CREATE_NEW_LIVE">Creare un nuovo live, invalidare l\'attuale indirizzo live, continuare?</string>
     <string name="LIVE_CREATE_TIPS">Crea prima una trasmissione in diretta</string>
     <string name="LIVE_CREATING">Crea %s live &#8230;</string>
     <string name="LIVE_CURRENT_TEXT">Live in diretta</string>
@@ -334,6 +348,7 @@
     <string name="LIVE_DETAIL_DEL_END_TIME">Eliminare l\'ora di fine</string>
     <string name="LIVE_DETAIL_DESCRIPTION">Descrizione Live</string>
     <string name="LIVE_DETAIL_TITLE">Titoli in diretta</string>
+    <string name="LIVE_FACEBOOK_PERMISSIONS">permessi</string>
     <string name="LIVE_FAILED">Impossibile risolvere i problemi di rete o di rete</string>
     <string name="LIVE_LANMODE_POP">Non iniziare dal vivo, vai a \"Connetti a WiFi\" o \"Hotspot\"?</string>
     <string name="LIVE_NOT_OPENED_POP">L\'account YouTube %s non ha ancora aperto il canale, non può vivere, si apre e riprova</string>
@@ -341,12 +356,17 @@
     <string name="LIVE_PLATFORM_FACEBOOK">Facebook</string>
     <string name="LIVE_PLATFORM_WEIBO">Sina Weibo</string>
     <string name="LIVE_PLATFORM_YOUTUBE">Youtube</string>
+    <string name="LIVE_RTMP_ENTER_KEY">Inserisci la chiave</string>
     <string name="LIVE_RTMP_HINT">rtmp://</string>
+    <string name="LIVE_SAVE_FAILED">Salva fallito, riprova</string>
     <string name="LIVE_SELECT_PLATFORM">Scegli una piattaforma dal vivo</string>
+    <string name="LIVE_SINAWEIBO_UNABLE_LIVE">Questo account non è temporaneamente in grado di vivere, se vai FAQ per saperne di più?</string>
+    <string name="LIVE_SINAWEIBO_UNCERTIFICATED">Account non certificato, vai al fondo del Sina Weibo clicca \"+\" > \"live\" per passaggi per completare la verifica</string>
     <string name="LIVE_SLOW_CONNECTION">Connessione lenta, non può riprodurre, passare o riprovare video in diretta in un ambiente di rete migliore.</string>
     <string name="LIVE_STOP_POP">Dopo l\'arresto, l\'indirizzo live non è valido se fermarsi?</string>
     <string name="LIVE_TESTING">Testare Live Web &#8230;</string>
     <string name="LIVE_TIME_ERROR_TIPS">L\'ora di inizio deve essere prima del termine finale</string>
+    <string name="LIVE_UNABLE_UNBIND">L\'attuale %1$s utilizza login %2$s, temporaneamente impossibile disconnettere l\'account</string>
     <string name="LIVE_UNBIND_ACCOUNT">Disconnetti l\'account di %s o no?</string>
     <string name="LOADING">In caricamento&#8230;</string>
     <string name="LOCAL_NOTIFICATION_AndroidMSG">Clicca sulla \"%s\" nella rubbrica \"Impostazioni\" del tuo Phone e attiva \"Messaggi\"</string>
@@ -606,6 +626,7 @@
     <string name="SETTING">Impostazioni&#8230;</string>
     <string name="SETTINGS">Impostazioni</string>
     <string name="SETTINGS_1">Impostazioni Funzioni</string>
+    <string name="SETTINGS_HOTSPOT_CONNECTED">Hotspot è collegato</string>
     <string name="SETTINGS_MOBILE_HOTSPOT">Mobile Hotspot</string>
     <string name="SETTINGS_Wechat_Switch_Cancel">Non puoi ricevere il push di Wechat se chiudi. Se vuoi cancellare il collegamento, ti preghiamo di vai a Wechat per smettere di seguire l\'account ufficiale \"加菲狗官微服务\".</string>
     <string name="SETTINGS_Wechat_Switch_Open">Si prega di concentrarsi sull\'account WeChat \"加菲狗官微服务\" e legare, dopo il successo del vecchio account WeChat, non riceverà più il messaggio</string>
