--- a/app/src/main/res/values-ja/strings.xml
+++ b/app/src/main/res/values-ja/strings.xml
@@ -134,7 +134,6 @@
     <string name="DEVICE_OFFLINE5">デバイスにWiFiを設定してください</string>
     <string name="DEVICE_OFFLINE6">WiFiなし</string>
     <string name="DEVICE_OFFLINE7">機器のホットスポットを接続してください</string>
-    <string name="DEVICE_SHARE_LIMIT_TIPS">株式数に達しました</string>
     <string name="DEVICE_UPGRADE">ソフトウェアアップグレード</string>
     <string name="DEVICE_UPGRADE_TIPS">デバイスは、ソフトウェアを更新するために反発する必要があります。</string>
     <string name="DEVICE_WIFI_ONLINE">WiFiオンライン</string>
@@ -241,6 +240,9 @@
     <string name="EVERY_DAY">毎日</string>
     <string name="EXPECT">間もなく更新されます、お楽しみに！</string>
     <string name="EXPERIENCE">体験</string>
+    <string name="FAQ_SINA_WEIBO">シーナブログのライブビデオをサポートしていない</string>
+    <string name="FAQ_SINA_WEIBO_TEXT1">1、アカウントがシーナのブログの実名認証を持っていることを確認し、ブラックリストアカウントではありません。</string>
+    <string name="FAQ_SINA_WEIBO_TEXT2">2、現在のシーナは中国本土のIPをサポートしています。</string>
     <string name="FEEDBACK">フィードバック</string>
     <string name="FEEDBACK_Copy">コピー</string>
     <string name="FEEDBACK_NULL">フィードバック内容を入力してください！</string>
@@ -275,9 +277,18 @@
     <string name="H5_VR_mode">VRモード</string>
     <string name="HOME">ホーム</string>
     <string name="HOTSPOTS_CONNECT_TIMEOUT_TIPS">ホットスポットに接続できません</string>
+    <string name="HOTSPOT_CONNECT_FAILED">接続に失敗しました。再試行してください。</string>
+    <string name="HOTSPOT_DEFAULT">カムホットスポット</string>
+    <string name="HOTSPOT_DEVICE_CONNECTING">デバイス接続</string>
     <string name="HOTSPOT_NAME">ホットスポット: %s</string>
+    <string name="HOTSPOT_NEME_HINT">ホットスポット名を入力してください</string>
+    <string name="HOTSPOT_NOTAUTO_OPEN_POP">現在のシステムはホットスポットを自動で開くことをサポートしていません。手動で開くために「設定」に移動するかどうか。</string>
+    <string name="HOTSPOT_OPENING">ホットスポットを開く</string>
+    <string name="HOTSPOT_OPEN_TIPS">デバイスが正常に動作するようにするには、モバイルデータネットワークを開いてください。</string>
     <string name="HOTSPOT_PASSWORD">ホットスポットのパスワードを入力してください</string>
     <string name="HOTSPOT_PASSWORD_ERROR">パスワードは8文字以上でなければなりません</string>
+    <string name="HOTSPOT_PSW_HINT">ホットスポットのパスワードを入力してください</string>
+    <string name="HOTSPOT_UNABLE_OPEN_POP">一時的にホットスポットを自動的に開くことができません。システムが「設定」に移動して手動で開くかどうか。</string>
     <string name="HOUR">时</string>
     <string name="HOURS">24時間プロプティング</string>
     <string name="HZ_NTSC_PAL">オンにしますNTSC</string>
@@ -322,9 +333,12 @@
     <string name="LIVE_ACCOUNT_BIND_TIPS">まずアカウントをバインドしてください</string>
     <string name="LIVE_ACCOUNT_UNBOUND">結合していません</string>
     <string name="LIVE_ADDRESS_EXPIRED">ライブアドレスの有効期限が切れています</string>
+    <string name="LIVE_AUTHO_FAILED">承認に失敗しました</string>
     <string name="LIVE_CHANNEL_CREATING_LOADING">作成する&#8230;</string>
+    <string name="LIVE_COPY_LINK">リンクをコピーする</string>
     <string name="LIVE_CREATE_BUTTON">ライブ作成</string>
     <string name="LIVE_CREATE_FAIL_TIPS">エラーを作成する</string>
+    <string name="LIVE_CREATE_NEW_LIVE">新しいライブを作成し、現在のライブアドレスを無効にして、続行しますか？</string>
     <string name="LIVE_CREATE_TIPS">まず生放送を作成してください</string>
     <string name="LIVE_CREATING">%s ライブを作成&#8230;</string>
     <string name="LIVE_CURRENT_TEXT">ライブライブ</string>
@@ -334,6 +348,7 @@
     <string name="LIVE_DETAIL_DEL_END_TIME">終了時刻を削除する</string>
     <string name="LIVE_DETAIL_DESCRIPTION">ライブ記述</string>
     <string name="LIVE_DETAIL_TITLE">ライブタイトル</string>
+    <string name="LIVE_FACEBOOK_PERMISSIONS">アクセス許可</string>
     <string name="LIVE_FAILED">問題の解決に失敗した</string>
     <string name="LIVE_LANMODE_POP">ライブを開始しないで、「WiFiに接続」または「ホットスポット」に移動しますか？</string>
     <string name="LIVE_NOT_OPENED_POP">YouTubeアカウント %s はまだチャンネルを開いていません。ライブできません。開いてからもう一度お試しください</string>
@@ -341,12 +356,17 @@
     <string name="LIVE_PLATFORM_FACEBOOK">Facebookの</string>
     <string name="LIVE_PLATFORM_WEIBO">シーナ・ワイボ</string>
     <string name="LIVE_PLATFORM_YOUTUBE">ユーチューブ</string>
+    <string name="LIVE_RTMP_ENTER_KEY">キーを入力してください</string>
     <string name="LIVE_RTMP_HINT">rtmp://</string>
+    <string name="LIVE_SAVE_FAILED">保存に失敗しました。再試行してください</string>
     <string name="LIVE_SELECT_PLATFORM">ライブプラットフォームを選択する</string>
+    <string name="LIVE_SINAWEIBO_UNABLE_LIVE">このアカウントは一時的に生きることができません。</string>
+    <string name="LIVE_SINAWEIBO_UNCERTIFICATED">未確認のアカウントは、マイクロブログの一番下にある "+"> "ライブ"をクリックして確認を完了してください</string>
     <string name="LIVE_SLOW_CONNECTION">接続が遅い、より良いネットワーク環境でライブビデオを再生、切り替え、または再試行することはできません。</string>
     <string name="LIVE_STOP_POP">停止後、ライブアドレスは停止するかどうか無効ですか？</string>
     <string name="LIVE_TESTING">ライブWebのテスト中&#8230;</string>
     <string name="LIVE_TIME_ERROR_TIPS">開始時刻は終了時刻より前でなければなりません</string>
+    <string name="LIVE_UNABLE_UNBIND">現在の %1$s use %2$s loginは、一時的にアカウントのバインドを解除できません</string>
     <string name="LIVE_UNBIND_ACCOUNT">アカウントのバインドを解除 %s するかどうか</string>
     <string name="LOADING">読み込み中&#8230;</string>
     <string name="LOCAL_NOTIFICATION_AndroidMSG">先にPhoneの設定－通知画面に %s を見つけ、\"通知を許可\"をオンにしてください</string>
@@ -606,6 +626,7 @@
     <string name="SETTING">設定中&#8230;</string>
     <string name="SETTINGS">設定</string>
     <string name="SETTINGS_1">機能設定</string>
+    <string name="SETTINGS_HOTSPOT_CONNECTED">ホットスポットが接続されている</string>
     <string name="SETTINGS_MOBILE_HOTSPOT">モバイルホットスポット</string>
     <string name="SETTINGS_Wechat_Switch_Cancel">オフにすると微信のプッシュ通知を受信できなくなります。バインディングを解除したい場合、微信で「加菲狗官微服务」のアカウントのフォローを解除してください。</string>
     <string name="SETTINGS_Wechat_Switch_Open">微信アカウント \"加菲狗官微服务\"に注目し、古い微信アカウントの成功がメッセージプッシュを受信しなくなったらバインドしてください</string>
