--- a/app/src/main/res/values-ru/strings.xml
+++ b/app/src/main/res/values-ru/strings.xml
@@ -134,7 +134,6 @@
     <string name="DEVICE_OFFLINE5">Пожалуйста, настройте WiFi для устройства</string>
     <string name="DEVICE_OFFLINE6">Нет доступных WiFi</string>
     <string name="DEVICE_OFFLINE7">Пожалуйста, подключите горячие точки оборудования</string>
-    <string name="DEVICE_SHARE_LIMIT_TIPS">Достигнуто количество достигнутых лимитов</string>
     <string name="DEVICE_UPGRADE">Устройство обновлено</string>
     <string name="DEVICE_UPGRADE_TIPS">Устройство должно быть отскок, чтобы обновить программное обеспечение.</string>
     <string name="DEVICE_WIFI_ONLINE">Подключено к WiFi</string>
@@ -241,6 +240,9 @@
     <string name="EVERY_DAY">Каждый день</string>
     <string name="EXPECT">В ближайшее время ожидается выход новой версии, следите за обновлениями</string>
     <string name="EXPERIENCE">Проверка</string>
+    <string name="FAQ_SINA_WEIBO">Не поддерживайте живое видео в блоге Sina</string>
+    <string name="FAQ_SINA_WEIBO_TEXT1">1, чтобы убедиться, что учетная запись имеет аутентификацию подлинности в блоге Sina и не является учетной записью черного списка.</string>
+    <string name="FAQ_SINA_WEIBO_TEXT2">2, нынешний Сина живет только для поддержки материкового мира Китая.</string>
     <string name="FEEDBACK">Обратная связь</string>
     <string name="FEEDBACK_Copy">копия</string>
     <string name="FEEDBACK_NULL">Пожалуйста, введите информацию для обратной связи</string>
@@ -275,9 +277,18 @@
     <string name="H5_VR_mode">Режим VR</string>
     <string name="HOME">Главная</string>
     <string name="HOTSPOTS_CONNECT_TIMEOUT_TIPS">Не удается подключиться к горячим точкам</string>
+    <string name="HOTSPOT_CONNECT_FAILED">Не удалось подключиться, повторите попытку</string>
+    <string name="HOTSPOT_DEFAULT">Cam&#8211;Hotspot</string>
+    <string name="HOTSPOT_DEVICE_CONNECTING">Подключение устройства</string>
     <string name="HOTSPOT_NAME">Точка доступа: %s</string>
+    <string name="HOTSPOT_NEME_HINT">Введите имя горячей точки</string>
+    <string name="HOTSPOT_NOTAUTO_OPEN_POP">Текущая система не поддерживает автоматическое открытие горячих точек, следует ли перейти к «настройкам» для открытия вручную?</string>
+    <string name="HOTSPOT_OPENING">Открытие горячей точки</string>
+    <string name="HOTSPOT_OPEN_TIPS">Чтобы обеспечить правильную работу устройства, откройте мобильную сеть передачи данных, да?</string>
     <string name="HOTSPOT_PASSWORD">Введите пароль hotspot</string>
     <string name="HOTSPOT_PASSWORD_ERROR">Пароль должен быть не менее 8 символов.</string>
+    <string name="HOTSPOT_PSW_HINT">Введите пароль hotspot</string>
+    <string name="HOTSPOT_UNABLE_OPEN_POP">Временно не удается автоматически открыть горячие точки, независимо от того, переходит ли система в «Настройки», чтобы открыть вручную?</string>
     <string name="HOUR">H</string>
     <string name="HOURS">Круглосуточно</string>
     <string name="HZ_NTSC_PAL">Открыть NTSC</string>
@@ -322,9 +333,12 @@
     <string name="LIVE_ACCOUNT_BIND_TIPS">Сначала свяжите аккаунт</string>
     <string name="LIVE_ACCOUNT_UNBOUND">несвязанный</string>
     <string name="LIVE_ADDRESS_EXPIRED">Срок действия живого адреса истек</string>
+    <string name="LIVE_AUTHO_FAILED">Авторизация не удалась</string>
     <string name="LIVE_CHANNEL_CREATING_LOADING">Создание &#8230;</string>
+    <string name="LIVE_COPY_LINK">копировать ссылку</string>
     <string name="LIVE_CREATE_BUTTON">Создать live</string>
     <string name="LIVE_CREATE_FAIL_TIPS">Создать сбой</string>
+    <string name="LIVE_CREATE_NEW_LIVE">Создать новый live, приведет к аннулированию текущего живого адреса, продолжите?</string>
     <string name="LIVE_CREATE_TIPS">Сначала создайте прямую трансляцию</string>
     <string name="LIVE_CREATING">Создание %s в прямом эфире &#8230;</string>
     <string name="LIVE_CURRENT_TEXT">Текущий статус</string>
@@ -334,6 +348,7 @@
     <string name="LIVE_DETAIL_DEL_END_TIME">Удалить время окончания</string>
     <string name="LIVE_DETAIL_DESCRIPTION">Живое описание</string>
     <string name="LIVE_DETAIL_TITLE">Живое название</string>
+    <string name="LIVE_FACEBOOK_PERMISSIONS">права доступа</string>
     <string name="LIVE_FAILED">Из&#8211;за проблем с адресом или сетью</string>
     <string name="LIVE_LANMODE_POP">Не поддерживайте live, переключитесь на «Connect to WiFi» или «Hotspot»?</string>
     <string name="LIVE_NOT_OPENED_POP">Учетная запись YouTube %s еще не открыла канал, не может жить, пожалуйста, откройте и повторите попытку</string>
@@ -341,12 +356,17 @@
     <string name="LIVE_PLATFORM_FACEBOOK">facebook</string>
     <string name="LIVE_PLATFORM_WEIBO">Сина Вейбо</string>
     <string name="LIVE_PLATFORM_YOUTUBE">YouTube</string>
+    <string name="LIVE_RTMP_ENTER_KEY">Введите ключ</string>
     <string name="LIVE_RTMP_HINT">rtmp://</string>
+    <string name="LIVE_SAVE_FAILED">Сохранить не удалось, повторите попытку</string>
     <string name="LIVE_SELECT_PLATFORM">Выберите живую платформу</string>
+    <string name="LIVE_SINAWEIBO_UNABLE_LIVE">Эта учетная запись временно не может жить, нужно ли часто задавать вопросы, чтобы узнать больше?</string>
+    <string name="LIVE_SINAWEIBO_UNCERTIFICATED">Uncertificated account, пожалуйста, перейдите к нижней части микро&#8211;блога, нажмите «+»> «жить», выполнив шаги для завершения проверки</string>
     <string name="LIVE_SLOW_CONNECTION">Медленное соединение, не может воспроизводить видео в реальном времени, скорость переключения или повторять попытку в лучшей сетевой среде.</string>
     <string name="LIVE_STOP_POP">После остановки, живой адрес будет недействительным, остановить ли?</string>
     <string name="LIVE_TESTING">Тестирование живой сети &#8230;</string>
     <string name="LIVE_TIME_ERROR_TIPS">Время начала должно быть раньше, чем время окончания</string>
+    <string name="LIVE_UNABLE_UNBIND">Текущий %1$s использует %2$s login, временно неспособный отменить привязку учетной записи</string>
     <string name="LIVE_UNBIND_ACCOUNT">Unbind %s аккаунт или нет?</string>
     <string name="LOADING">Загрузка&#8230;</string>
     <string name="LOCAL_NOTIFICATION_AndroidMSG">Пожалуйста, через настройки&#8211;уведомления на вашем Phone, найдите %s и откройте уведомления</string>
@@ -606,6 +626,7 @@
     <string name="SETTING">Установка&#8230;</string>
     <string name="SETTINGS">Параметры</string>
     <string name="SETTINGS_1">Параметры</string>
+    <string name="SETTINGS_HOTSPOT_CONNECTED">Точка доступа подключена</string>
     <string name="SETTINGS_MOBILE_HOTSPOT">Мобильная точка доступа</string>
     <string name="SETTINGS_Wechat_Switch_Cancel">WeChat сообщения не доставят при закрытии. Перейтите к WeChat и перестаньте следить за официальным аккаунтом \"加菲狗官微服务\" если хотите отменить привязку.</string>
     <string name="SETTINGS_Wechat_Switch_Open">Пожалуйста, сосредоточьтесь на учетной записи WeChat \"加菲狗官微服务\" и свяжите ее, после того как успех старой учетной записи WeChat больше не получит сообщение push</string>
