--- a/app/src/main/res/values-tr-rTR/strings.xml
+++ b/app/src/main/res/values-tr-rTR/strings.xml
@@ -134,7 +134,6 @@
     <string name="DEVICE_OFFLINE5">Lütfen cihaz için Kablosuz özelliğini yapılandırın</string>
     <string name="DEVICE_OFFLINE6">Mevcut WiFi yok</string>
     <string name="DEVICE_OFFLINE7">Lütfen ekipmanın sıcak noktalarını birbirine bağlayın</string>
-    <string name="DEVICE_SHARE_LIMIT_TIPS">Hisselerin sayısına ulaşılmıştır</string>
     <string name="DEVICE_UPGRADE">Cihaz yükseltme</string>
     <string name="DEVICE_UPGRADE_TIPS">Cihaz yazılımını güncellemek için tepme gerekmektedir.</string>
     <string name="DEVICE_WIFI_ONLINE">WiFi Çevrimiçi</string>
@@ -241,6 +240,9 @@
     <string name="EVERY_DAY">Tüm gün</string>
     <string name="EXPECT">Lütfen bekleyin!</string>
     <string name="EXPERIENCE">Tecrübe</string>
+    <string name="FAQ_SINA_WEIBO">Sina Weibo canlı video desteklemez</string>
+    <string name="FAQ_SINA_WEIBO_TEXT1">1, hesap Sina gerçek adı kimlik doğrulaması Weibo ve bir kara liste hesabı değil emin olmak için.</string>
+    <string name="FAQ_SINA_WEIBO_TEXT2">2, mevcut Sina canlı sadece Çin anakara IP destekler.</string>
     <string name="FEEDBACK">Geri dönüş</string>
     <string name="FEEDBACK_Copy">Kopya</string>
     <string name="FEEDBACK_NULL">Lütfen içerikleri girin</string>
@@ -275,9 +277,18 @@
     <string name="H5_VR_mode">VR modu</string>
     <string name="HOME">Ev</string>
     <string name="HOTSPOTS_CONNECT_TIMEOUT_TIPS">Etkin noktalara bağlanılamıyor</string>
+    <string name="HOTSPOT_CONNECT_FAILED">Bağlantı başarısız oldu, lütfen tekrar deneyin.</string>
+    <string name="HOTSPOT_DEFAULT">Cam&#8211;Hotspot</string>
+    <string name="HOTSPOT_DEVICE_CONNECTING">Cihaz bağlama</string>
     <string name="HOTSPOT_NAME">Hotspot: %s</string>
+    <string name="HOTSPOT_NEME_HINT">Lütfen bir etkin nokta adı girin</string>
+    <string name="HOTSPOT_NOTAUTO_OPEN_POP">Mevcut sistem, sıcak noktaları otomatik olarak açmayı desteklemiyor, elle açmak için \"ayarlar\" a gitmek mi gerekiyor?</string>
+    <string name="HOTSPOT_OPENING">Hotspot açılıyor</string>
+    <string name="HOTSPOT_OPEN_TIPS">Cihazın düzgün çalışmasını sağlamak için lütfen mobil veri ağını açın, evet?</string>
     <string name="HOTSPOT_PASSWORD">Lütfen hotspot parolasını girin</string>
     <string name="HOTSPOT_PASSWORD_ERROR">Parola en az 8 karakter uzunluğunda olmalıdır</string>
+    <string name="HOTSPOT_PSW_HINT">Lütfen hotspot şifresini girin</string>
+    <string name="HOTSPOT_UNABLE_OPEN_POP">Geçici olarak sıcak noktaları otomatik olarak açamıyor, sistem elle açmak için \"Ayarlar\" bölümüne gidip gitmiyor?</string>
     <string name="HOUR">S</string>
     <string name="HOURS">24 saat</string>
     <string name="HZ_NTSC_PAL">NTSC\'yi başlat</string>
@@ -322,9 +333,12 @@
     <string name="LIVE_ACCOUNT_BIND_TIPS">Lütfen önce bir hesabı bağla</string>
     <string name="LIVE_ACCOUNT_UNBOUND">bağsız</string>
     <string name="LIVE_ADDRESS_EXPIRED">Canlı adresin süresi doldu</string>
+    <string name="LIVE_AUTHO_FAILED">Yetkilendirme başarısız oldu</string>
     <string name="LIVE_CHANNEL_CREATING_LOADING">Yarat &#8230;</string>
+    <string name="LIVE_COPY_LINK">linki kopyala</string>
     <string name="LIVE_CREATE_BUTTON">Canlı Oluştur</string>
     <string name="LIVE_CREATE_FAIL_TIPS">Hatalar oluştur</string>
+    <string name="LIVE_CREATE_NEW_LIVE">Yeni bir canlı oluşturun, geçerli canlı adresi geçersiz kılacak, devam etsin mü?</string>
     <string name="LIVE_CREATE_TIPS">Lütfen önce bir canlı yayın oluşturun</string>
     <string name="LIVE_CREATING">%s canlı yayın oluştur &#8230;</string>
     <string name="LIVE_CURRENT_TEXT">Canlı canlı</string>
@@ -334,6 +348,7 @@
     <string name="LIVE_DETAIL_DEL_END_TIME">Bitiş saatini sil</string>
     <string name="LIVE_DETAIL_DESCRIPTION">Canlı Açıklama</string>
     <string name="LIVE_DETAIL_TITLE">Canlı Başlıklar</string>
+    <string name="LIVE_FACEBOOK_PERMISSIONS">İzinler</string>
     <string name="LIVE_FAILED">Adreslenemedi veya ağ sorunları</string>
     <string name="LIVE_LANMODE_POP">Canlı hayata başlamaz, \"WiFi\'ye Bağlan\" veya \"Sıcak Nokta\" ya gidin?</string>
     <string name="LIVE_NOT_OPENED_POP">YouTube hesabı %s henüz kanalı açmadı, yaşayamıyor, lütfen açıp tekrar deneyin.</string>
@@ -341,12 +356,17 @@
     <string name="LIVE_PLATFORM_FACEBOOK">Facebook</string>
     <string name="LIVE_PLATFORM_WEIBO">Sina Weibo</string>
     <string name="LIVE_PLATFORM_YOUTUBE">Youtube</string>
+    <string name="LIVE_RTMP_ENTER_KEY">Lütfen anahtarı girin</string>
     <string name="LIVE_RTMP_HINT">rtmp://</string>
+    <string name="LIVE_SAVE_FAILED">Kaydetme başarısız oldu, lütfen tekrar deneyin.</string>
     <string name="LIVE_SELECT_PLATFORM">Canlı bir platform seçin</string>
+    <string name="LIVE_SINAWEIBO_UNABLE_LIVE">Bu hesap, geçici olarak yaşayamıyor mu, yoksa daha fazla bilgi edinmek için SSS bölümüne gidiyor mu?</string>
+    <string name="LIVE_SINAWEIBO_UNCERTIFICATED">Uncertificated account, lütfen doğrulamayı tamamlamak için mikro blogun altına gidin ve adım adım \"+\" > \"canlı\" seçeneğini tıklayın.</string>
     <string name="LIVE_SLOW_CONNECTION">Yavaş bağlantı, daha iyi bir ağ ortamında canlı video oynatamaz, geçemez veya yeniden denemez.</string>
     <string name="LIVE_STOP_POP">Durdurma işleminden sonra canlı adres geçersiz mi?</string>
     <string name="LIVE_TESTING">Canlı Web\'i Test Etmek &#8230;</string>
     <string name="LIVE_TIME_ERROR_TIPS">Başlangıç ​​zamanı bitiş süresinden önce olmalıdır</string>
+    <string name="LIVE_UNABLE_UNBIND">Geçerli %1$s kullanıcısı %2$s oturum açma işlemini kullanıyor, geçici olarak hesabı bağlayamıyor</string>
     <string name="LIVE_UNBIND_ACCOUNT">%s hesabını silmek istediğinizden emin misiniz?</string>
     <string name="LOADING">Yükleniyor&#8230;</string>
     <string name="LOCAL_NOTIFICATION_AndroidMSG">Phone\'nunuzda \"Ayarlamalar&#8211;Bildirimlar\" aracılığı ile %s i bulun ve Bildirimler i açın</string>
@@ -606,6 +626,7 @@
     <string name="SETTING">Ayarlanıyor&#8230;</string>
     <string name="SETTINGS">Ayarlamalar</string>
     <string name="SETTINGS_1">Ayarlamalar</string>
+    <string name="SETTINGS_HOTSPOT_CONNECTED">Hotspot bağlı</string>
     <string name="SETTINGS_MOBILE_HOTSPOT">Mobil Erişim Noktası</string>
     <string name="SETTINGS_Wechat_Switch_Cancel">Kapanırsa, WeChat itilmesini kabul edemezsiniz. \"加菲狗官微服务\" nı takip etmeden kaldırılmasını.</string>
     <string name="SETTINGS_Wechat_Switch_Open">Lütfen eski WeChat hesabının başarısı artık mesajı zorla almazsak WeChat hesabına \"加菲狗官微服务\" na odaklanın ve bağlayın.</string>
