--- a/app/src/main/res/values-vi/strings.xml
+++ b/app/src/main/res/values-vi/strings.xml
@@ -134,7 +134,6 @@
     <string name="DEVICE_OFFLINE5">Vui lòng định cấu hình WiFi cho thiết bị</string>
     <string name="DEVICE_OFFLINE6">Không có sẵn WiFi</string>
     <string name="DEVICE_OFFLINE7">Vui lòng kết nối thiết bị điểm nóng</string>
-    <string name="DEVICE_SHARE_LIMIT_TIPS">Số cổ phần đã đạt được</string>
     <string name="DEVICE_UPGRADE">Nâng cấp thiết bị</string>
     <string name="DEVICE_UPGRADE_TIPS">Các thiết bị cần phải được bật để cập nhật phần mềm.</string>
     <string name="DEVICE_WIFI_ONLINE">WiFi&#8211;Online</string>
@@ -241,6 +240,9 @@
     <string name="EVERY_DAY">Cả ngày</string>
     <string name="EXPECT">Hãy mong đợi!</string>
     <string name="EXPERIENCE">Trải nghiệm</string>
+    <string name="FAQ_SINA_WEIBO">Không hỗ trợ Sina Weibo video trực tiếp</string>
+    <string name="FAQ_SINA_WEIBO_TEXT1">1, để đảm bảo rằng tài khoản có xác thực Sina tên Weibo, và không phải là một tài khoản danh sách đen.</string>
+    <string name="FAQ_SINA_WEIBO_TEXT2">2, hiện tại Sina sống chỉ hỗ trợ Trung Quốc đại lục IP.</string>
     <string name="FEEDBACK">Phản hồi</string>
     <string name="FEEDBACK_Copy">Sao chép</string>
     <string name="FEEDBACK_NULL">Nhập vào nội dung</string>
@@ -275,9 +277,18 @@
     <string name="H5_VR_mode">Chế độ VR</string>
     <string name="HOME">Home</string>
     <string name="HOTSPOTS_CONNECT_TIMEOUT_TIPS">Không thể kết nối với các điểm nóng</string>
+    <string name="HOTSPOT_CONNECT_FAILED">Kết nối không thành công, hãy thử lại</string>
+    <string name="HOTSPOT_DEFAULT">Điểm nóng</string>
+    <string name="HOTSPOT_DEVICE_CONNECTING">Kết nối thiết bị</string>
     <string name="HOTSPOT_NAME">Hotspot: %s</string>
+    <string name="HOTSPOT_NEME_HINT">Vui lòng nhập tên điểm truy cập</string>
+    <string name="HOTSPOT_NOTAUTO_OPEN_POP">Hệ thống hiện tại không hỗ trợ mở các điểm nóng automaticatlly, cho dù để đi đến \"cài đặt\" để mở bằng tay?</string>
+    <string name="HOTSPOT_OPENING">Mở điểm truy cập</string>
+    <string name="HOTSPOT_OPEN_TIPS">Để đảm bảo thiết bị hoạt động bình thường, vui lòng mở mạng dữ liệu di động, đúng không?</string>
     <string name="HOTSPOT_PASSWORD">Vui lòng nhập mật khẩu điểm truy cập</string>
     <string name="HOTSPOT_PASSWORD_ERROR">Mật khẩu phải có ít nhất 8 ký tự</string>
+    <string name="HOTSPOT_PSW_HINT">Vui lòng nhập mật khẩu điểm truy cập</string>
+    <string name="HOTSPOT_UNABLE_OPEN_POP">Tạm thời không thể mở các điểm nóng tự động, cho dù hệ thống có đi đến \"Cài đặt\" để mở bằng tay không?</string>
     <string name="HOUR">H</string>
     <string name="HOURS">24 giờ</string>
     <string name="HZ_NTSC_PAL">Bắt đầu NTSC</string>
@@ -322,9 +333,12 @@
     <string name="LIVE_ACCOUNT_BIND_TIPS">Trước tiên, hãy liên kết tài khoản</string>
     <string name="LIVE_ACCOUNT_UNBOUND">cởi ra</string>
     <string name="LIVE_ADDRESS_EXPIRED">Địa chỉ sống đã hết hạn</string>
+    <string name="LIVE_AUTHO_FAILED">Ủy quyển thất bại</string>
     <string name="LIVE_CHANNEL_CREATING_LOADING">Tạo &#8230;</string>
+    <string name="LIVE_COPY_LINK">sao chép đường dẫn</string>
     <string name="LIVE_CREATE_BUTTON">Tạo Live</string>
     <string name="LIVE_CREATE_FAIL_TIPS">Tạo lỗi</string>
+    <string name="LIVE_CREATE_NEW_LIVE">Tạo một live mới, sẽ làm mất hiệu lực địa chỉ hiện tại, tiếp tục?</string>
     <string name="LIVE_CREATE_TIPS">Xin vui lòng tạo ra một buổi phát sóng trực tiếp đầu tiên</string>
     <string name="LIVE_CREATING">Tạo %s sống &#8230;</string>
     <string name="LIVE_CURRENT_TEXT">Sống trực tiếp</string>
@@ -334,6 +348,7 @@
     <string name="LIVE_DETAIL_DEL_END_TIME">Xóa thời gian kết thúc</string>
     <string name="LIVE_DETAIL_DESCRIPTION">Mô tả trực tiếp</string>
     <string name="LIVE_DETAIL_TITLE">live Titles</string>
+    <string name="LIVE_FACEBOOK_PERMISSIONS">Quyền</string>
     <string name="LIVE_FAILED">Không thể giải quyết các vấn đề về mạng hoặc địa chỉ</string>
     <string name="LIVE_LANMODE_POP">Không bắt đầu sống, đi tới \"Kết nối với WiFi\" hoặc \"Điểm Truy cập\"?</string>
     <string name="LIVE_NOT_OPENED_POP">Tài khoản YouTube %s chưa mở kênh, không thể sống, vui lòng mở và thử lại</string>
@@ -341,12 +356,17 @@
     <string name="LIVE_PLATFORM_FACEBOOK">Facebook</string>
     <string name="LIVE_PLATFORM_WEIBO">Sina Weibo</string>
     <string name="LIVE_PLATFORM_YOUTUBE">Youtube</string>
+    <string name="LIVE_RTMP_ENTER_KEY">Vui lòng nhập khóa</string>
     <string name="LIVE_RTMP_HINT">rtmp://</string>
+    <string name="LIVE_SAVE_FAILED">Lưu không thành công, vui lòng thử lại</string>
     <string name="LIVE_SELECT_PLATFORM">Chọn nền tảng trực tiếp</string>
+    <string name="LIVE_SINAWEIBO_UNABLE_LIVE">Tài khoản này tạm thời không thể sống được, có nên đi Câu Hỏi Thường Gặp để tìm hiểu thêm không?</string>
+    <string name="LIVE_SINAWEIBO_UNCERTIFICATED">Tài khoản không xác minh, vui lòng đi đến cuối blog nhỏ \"+\" > \"sống\" theo các bước để hoàn thành xác minh</string>
     <string name="LIVE_SLOW_CONNECTION">Kết nối chậm, không thể phát, chuyển đổi hoặc thử lại video trực tiếp trong môi trường mạng tốt hơn.</string>
     <string name="LIVE_STOP_POP">Sau khi dừng, địa chỉ sống không hợp lệ dù dừng?</string>
     <string name="LIVE_TESTING">Đang thử nghiệm Web Trực Tuyến &#8230;</string>
     <string name="LIVE_TIME_ERROR_TIPS">Thời gian bắt đầu phải sớm hơn thời gian kết thúc</string>
+    <string name="LIVE_UNABLE_UNBIND">%1$s Hiện tại sử dụng %2$s đăng nhập, tạm thời không thể hủy liên kết tài khoản</string>
     <string name="LIVE_UNBIND_ACCOUNT">Hủy liên kết tài khoản %s hay không?</string>
     <string name="LOADING">Đang tải&#8230;</string>
     <string name="LOCAL_NOTIFICATION_AndroidMSG">Trong mục Cài Đặt&#8211;Thông báo trên Phone, tìm %s mở \'Thông báo\'</string>
@@ -606,6 +626,7 @@
     <string name="SETTING">Đang cài đặt&#8230;</string>
     <string name="SETTINGS">Cài đặt</string>
     <string name="SETTINGS_1">Cài đặt</string>
+    <string name="SETTINGS_HOTSPOT_CONNECTED">Hotspot được kết nối</string>
     <string name="SETTINGS_MOBILE_HOTSPOT">Điểm nóng Mobile</string>
     <string name="SETTINGS_Wechat_Switch_Cancel">Nếu đóng cửa, nó không thể nhận được WeChat đẩy. Hủy bỏ nó bằng cách hủy theo dõi \"加菲狗官微服务\".</string>
     <string name="SETTINGS_Wechat_Switch_Open">Hãy tập trung vào tài khoản WeChat \"加菲狗官微服务\" và ràng buộc, sau khi thành công của tài khoản WeChat cũ sẽ không còn nhận được thông báo push</string>
