--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -134,7 +134,6 @@
     <string name="DEVICE_OFFLINE5">Please configure WiFi for device</string>
     <string name="DEVICE_OFFLINE6">No WiFi available</string>
     <string name="DEVICE_OFFLINE7">Please connect equipment hot spots</string>
-    <string name="DEVICE_SHARE_LIMIT_TIPS">The number of share limit reached</string>
     <string name="DEVICE_UPGRADE">Device software update</string>
     <string name="DEVICE_UPGRADE_TIPS">The device needs to be rebound to update software.</string>
     <string name="DEVICE_WIFI_ONLINE">WiFi&#8211;Online</string>
@@ -241,6 +240,9 @@
     <string name="EVERY_DAY">Everyday</string>
     <string name="EXPECT">Coming soon, please expect.</string>
     <string name="EXPERIENCE">Experience</string>
+    <string name="FAQ_SINA_WEIBO">Do not support Sina Weibo live video</string>
+    <string name="FAQ_SINA_WEIBO_TEXT1">1, to ensure that the account has the Sina Weibo real&#8211;name authentication, and is not a blacklist account.</string>
+    <string name="FAQ_SINA_WEIBO_TEXT2">2, the current Sina live only support China mainland IP.</string>
     <string name="FEEDBACK">Feedback</string>
     <string name="FEEDBACK_Copy">Copy</string>
     <string name="FEEDBACK_NULL">Please input contents</string>
@@ -275,9 +277,18 @@
     <string name="H5_VR_mode">VR mode</string>
     <string name="HOME">Home</string>
     <string name="HOTSPOTS_CONNECT_TIMEOUT_TIPS">Can not connect to hotspots</string>
+    <string name="HOTSPOT_CONNECT_FAILED">Connection failed, please retry</string>
+    <string name="HOTSPOT_DEFAULT">Cam&#8211;Hotspot</string>
+    <string name="HOTSPOT_DEVICE_CONNECTING">Device connecting</string>
     <string name="HOTSPOT_NAME">Hotspot: %s</string>
+    <string name="HOTSPOT_NEME_HINT">Please enter a hotspot name</string>
+    <string name="HOTSPOT_NOTAUTO_OPEN_POP">The current system does not support opening the hot spots automaticatlly, whether to go to the \"settings\" to open manually?</string>
+    <string name="HOTSPOT_OPENING">Opening hotspot</string>
+    <string name="HOTSPOT_OPEN_TIPS">To ensure the device work properly, please open the mobile data network, yes?</string>
     <string name="HOTSPOT_PASSWORD">Please enter the hotspot password</string>
     <string name="HOTSPOT_PASSWORD_ERROR">Password must be at least 8 characters</string>
+    <string name="HOTSPOT_PSW_HINT">Please enter the hotspot password</string>
+    <string name="HOTSPOT_UNABLE_OPEN_POP">Temporarily unable to open hotspots automatically , whether the system go to \"Settings\" to open manually?</string>
     <string name="HOUR">H</string>
     <string name="HOURS">24 hours</string>
     <string name="HZ_NTSC_PAL">Start NTSC</string>
@@ -322,9 +333,12 @@
     <string name="LIVE_ACCOUNT_BIND_TIPS">Please bind an account first</string>
     <string name="LIVE_ACCOUNT_UNBOUND">Unbound</string>
     <string name="LIVE_ADDRESS_EXPIRED">Live address has expired</string>
+    <string name="LIVE_AUTHO_FAILED">Authorization failed</string>
     <string name="LIVE_CHANNEL_CREATING_LOADING">Creating &#8230;</string>
+    <string name="LIVE_COPY_LINK">copy Link</string>
     <string name="LIVE_CREATE_BUTTON">Create live</string>
     <string name="LIVE_CREATE_FAIL_TIPS">Create fail</string>
+    <string name="LIVE_CREATE_NEW_LIVE">Create a new live, will invalidate the current live address, continue?</string>
     <string name="LIVE_CREATE_TIPS">Please create a live broadcast first</string>
     <string name="LIVE_CREATING">Creating %s live &#8230;</string>
     <string name="LIVE_CURRENT_TEXT">Current live</string>
@@ -334,6 +348,7 @@
     <string name="LIVE_DETAIL_DEL_END_TIME">Delete end time</string>
     <string name="LIVE_DETAIL_DESCRIPTION">Live description</string>
     <string name="LIVE_DETAIL_TITLE">Live title</string>
+    <string name="LIVE_FACEBOOK_PERMISSIONS">Permissions</string>
     <string name="LIVE_FAILED">Due to address or network problems, live failed</string>
     <string name="LIVE_LANMODE_POP">Do not support live, switch to \"Connect to WiFi\" or \"Hotspot\"?</string>
     <string name="LIVE_NOT_OPENED_POP">YouTube account %s has not yet opened the channel, can not live, please open and try again</string>
@@ -341,12 +356,17 @@
     <string name="LIVE_PLATFORM_FACEBOOK">Facebook</string>
     <string name="LIVE_PLATFORM_WEIBO">Sina Weibo</string>
     <string name="LIVE_PLATFORM_YOUTUBE">YouTube</string>
+    <string name="LIVE_RTMP_ENTER_KEY">Please enter the key</string>
     <string name="LIVE_RTMP_HINT">rtmp://</string>
+    <string name="LIVE_SAVE_FAILED">Save failed, please retry</string>
     <string name="LIVE_SELECT_PLATFORM">Select a live platform</string>
+    <string name="LIVE_SINAWEIBO_UNABLE_LIVE">This account is temporarily unable to live, whether to go FAQ to learn more?</string>
+    <string name="LIVE_SINAWEIBO_UNCERTIFICATED">Uncertificated account, please go to the bottom of the Sina Weibo click \"+\" > \"live\" by steps to complete verification</string>
     <string name="LIVE_SLOW_CONNECTION">Slow connection, can not play live video, switch rate, or try again in a better network environment.</string>
     <string name="LIVE_STOP_POP">After the stop, the live address will be invalid, whether to stop?</string>
     <string name="LIVE_TESTING">Testing live web &#8230;</string>
     <string name="LIVE_TIME_ERROR_TIPS">The start time must be earlier than the end time</string>
+    <string name="LIVE_UNABLE_UNBIND">The current %1$s use %2$s login, temporarily unable to unbind the account</string>
     <string name="LIVE_UNBIND_ACCOUNT">Unbind %s account or not?</string>
     <string name="LOADING">Loading&#8230;</string>
     <string name="LOCAL_NOTIFICATION_AndroidMSG">Please go to Phone\'s \"Settings\"&#8211;\"Notifications\", find %s and open \'Notifications\'</string>
@@ -606,6 +626,7 @@
     <string name="SETTING">Setting&#8230;</string>
     <string name="SETTINGS">Settings</string>
     <string name="SETTINGS_1">Settings</string>
+    <string name="SETTINGS_HOTSPOT_CONNECTED">Hotspot is connected</string>
     <string name="SETTINGS_MOBILE_HOTSPOT">Mobile hotspot</string>
     <string name="SETTINGS_Wechat_Switch_Cancel">If closed, it cannot receive WeChat push. Unbinding it by unfollowing \“加菲狗官微服务\”.</string>
     <string name="SETTINGS_Wechat_Switch_Open">Please focus on the WeChat account \"加菲狗官微服务\" and bind, after the success of the old WeChat account will no longer receive the message push</string>
