--- a/app/src/main/res/values-de/strings.xml
+++ b/app/src/main/res/values-de/strings.xml
@@ -134,7 +134,6 @@
     <string name="DEVICE_OFFLINE5">Bitte konfiguriere WiFi für das Gerät</string>
     <string name="DEVICE_OFFLINE6">Kein WiFi verfügbar</string>
     <string name="DEVICE_OFFLINE7">Bitte schließen Sie die Hotspots an</string>
-    <string name="DEVICE_SHARE_LIMIT_TIPS">Die Anzahl der Aktiengrenzen wurde erreicht</string>
     <string name="DEVICE_UPGRADE">Software&#8211;Upgrade</string>
     <string name="DEVICE_UPGRADE_TIPS">Das Gerät benötigt werden Rebound&#8211;Software zu aktualisieren.</string>
     <string name="DEVICE_WIFI_ONLINE">Online via WiFi</string>
@@ -241,6 +240,9 @@
     <string name="EVERY_DAY">Täglich</string>
     <string name="EXPECT">Sie erwarten!</string>
     <string name="EXPERIENCE">Erfahrung</string>
+    <string name="FAQ_SINA_WEIBO">Nicht unterstützen Sina Weibo Live Video</string>
+    <string name="FAQ_SINA_WEIBO_TEXT1">1, um sicherzustellen, dass das Konto hat die Sina Weibo Real&#8211;Name&#8211;Authentifizierung, und ist kein Blacklist&#8211;Konto.</string>
+    <string name="FAQ_SINA_WEIBO_TEXT2">2, die aktuelle Sina leben nur unterstützen China Festland IP.</string>
     <string name="FEEDBACK">Feedback</string>
     <string name="FEEDBACK_Copy">Kopieren</string>
     <string name="FEEDBACK_NULL">Feedback eingeben</string>
@@ -275,9 +277,18 @@
     <string name="H5_VR_mode">VR&#8211;Modus</string>
     <string name="HOME">Homepage</string>
     <string name="HOTSPOTS_CONNECT_TIMEOUT_TIPS">Kann keine Verbindung zu Hotspots herstellen</string>
+    <string name="HOTSPOT_CONNECT_FAILED">Verbindung fehlgeschlagen, bitte versuchen Sie es erneut</string>
+    <string name="HOTSPOT_DEFAULT">Cam&#8211;Hotspot</string>
+    <string name="HOTSPOT_DEVICE_CONNECTING">Geräteanschluss</string>
     <string name="HOTSPOT_NAME">Hotspot: %s</string>
+    <string name="HOTSPOT_NEME_HINT">Bitte geben Sie einen Hotspot&#8211;Namen ein</string>
+    <string name="HOTSPOT_NOTAUTO_OPEN_POP">Das aktuelle System unterstützt das Öffnen der Hotspots nicht automatisch, ob man die \"Einstellungen\" manuell öffnen möchte?</string>
+    <string name="HOTSPOT_OPENING">Hotspot öffnen</string>
+    <string name="HOTSPOT_OPEN_TIPS">Um sicherzustellen, dass das Gerät ordnungsgemäß funktioniert, öffnen Sie bitte das mobile Datennetz, ja?</string>
     <string name="HOTSPOT_PASSWORD">Bitte geben Sie das Hotspot&#8211;Passwort ein</string>
     <string name="HOTSPOT_PASSWORD_ERROR">Das Passwort muss mindestens 8 Zeichen lang sein</string>
+    <string name="HOTSPOT_PSW_HINT">Bitte geben Sie das Hotspot&#8211;Passwort ein</string>
+    <string name="HOTSPOT_UNABLE_OPEN_POP">Vorübergehend nicht in der Lage, Hotspots automatisch zu öffnen, ob das System auf \"Einstellungen\" geht, um manuell zu öffnen?</string>
     <string name="HOUR">H</string>
     <string name="HOURS">Ganztäglich</string>
     <string name="HZ_NTSC_PAL">aktivieren NTSC</string>
@@ -322,9 +333,12 @@
     <string name="LIVE_ACCOUNT_BIND_TIPS">Bitte binden Sie zuerst ein Konto</string>
     <string name="LIVE_ACCOUNT_UNBOUND">Ungebunden</string>
     <string name="LIVE_ADDRESS_EXPIRED">Live&#8211;Adresse abgelaufen ist</string>
+    <string name="LIVE_AUTHO_FAILED">Autorisation fehlgeschlagen</string>
     <string name="LIVE_CHANNEL_CREATING_LOADING">Erstellen &#8230;</string>
+    <string name="LIVE_COPY_LINK">Link kopieren</string>
     <string name="LIVE_CREATE_BUTTON">Erstellen Sie Live</string>
     <string name="LIVE_CREATE_FAIL_TIPS">Erstellen Sie Fehler</string>
+    <string name="LIVE_CREATE_NEW_LIVE">Erstellen Sie eine neue Live, wird die aktuelle Live&#8211;Adresse ungültig, weiter?</string>
     <string name="LIVE_CREATE_TIPS">Bitte zuerst eine Live&#8211;Sendung erstellen</string>
     <string name="LIVE_CREATING">%s live erstellen &#8230;</string>
     <string name="LIVE_CURRENT_TEXT">Aktuell leben</string>
@@ -334,6 +348,7 @@
     <string name="LIVE_DETAIL_DEL_END_TIME">Endzeit löschen</string>
     <string name="LIVE_DETAIL_DESCRIPTION">Live Beschreibung</string>
     <string name="LIVE_DETAIL_TITLE">Live&#8211;Titel</string>
+    <string name="LIVE_FACEBOOK_PERMISSIONS">Berechtigungen</string>
     <string name="LIVE_FAILED">Aufgrund von Adressen&#8211; oder Netzwerkproblemen fehlgeschlagen</string>
     <string name="LIVE_LANMODE_POP">Starten Sie nicht live, wechseln Sie zu \"Connect to WiFi\" oder \"Hotspot\"?</string>
     <string name="LIVE_NOT_OPENED_POP">YouTube&#8211;Konto %s hat den Kanal noch nicht geöffnet, kann nicht leben, bitte öffnen und nochmal versuchen</string>
@@ -341,12 +356,17 @@
     <string name="LIVE_PLATFORM_FACEBOOK">Facebook</string>
     <string name="LIVE_PLATFORM_WEIBO">Sina Weibo</string>
     <string name="LIVE_PLATFORM_YOUTUBE">Youtube</string>
+    <string name="LIVE_RTMP_ENTER_KEY">Bitte geben Sie den Schlüssel ein</string>
     <string name="LIVE_RTMP_HINT">rtmp://</string>
+    <string name="LIVE_SAVE_FAILED">Speichern fehlgeschlagen, bitte versuchen Sie es erneut</string>
     <string name="LIVE_SELECT_PLATFORM">Wähle eine Live&#8211;Plattform</string>
+    <string name="LIVE_SINAWEIBO_UNABLE_LIVE">Dieses Konto ist vorübergehend nicht in der Lage zu leben, ob zu gehen FAQ, um mehr zu lernen?</string>
+    <string name="LIVE_SINAWEIBO_UNCERTIFICATED">Unzertifiziertes Konto, bitte gehen Sie auf die Unterseite des Mikro&#8211;Blogs klicken Sie \"+\" > \"live\" durch Schritte, um die Überprüfung zu vervollständigen</string>
     <string name="LIVE_SLOW_CONNECTION">Langsame Verbindung, kann kein Live&#8211;Video abspielen, umschalten oder in einer besseren Netzwerkumgebung erneut versuchen.</string>
     <string name="LIVE_STOP_POP">Nach dem Stopp ist die Live&#8211;Adresse ungültig, ob zu stoppen?</string>
     <string name="LIVE_TESTING">Testen von Live&#8211;Web &#8230;</string>
     <string name="LIVE_TIME_ERROR_TIPS">Die Startzeit muss früher als die Endzeit sein</string>
+    <string name="LIVE_UNABLE_UNBIND">Die aktuelle %1$s use %2$s login, vorübergehend nicht in der Lage, das Konto zu entbinden</string>
     <string name="LIVE_UNBIND_ACCOUNT">Unbind %s Konto oder nicht?</string>
     <string name="LOADING">Wird geladen&#8230;</string>
     <string name="LOCAL_NOTIFICATION_AndroidMSG">Bitte %s auf Seite Einstellungen&#8211;Mitteilungen im Phone finden, und Mitteilungen erlauben einschalten</string>
@@ -606,6 +626,7 @@
     <string name="SETTING">In Einstellung&#8230;</string>
     <string name="SETTINGS">Einstellung</string>
     <string name="SETTINGS_1">Funktionseinstellung</string>
+    <string name="SETTINGS_HOTSPOT_CONNECTED">Hotspot ist verbunden</string>
     <string name="SETTINGS_MOBILE_HOTSPOT">Mobiler Hotspot</string>
     <string name="SETTINGS_Wechat_Switch_Cancel">Nach dem Deaktivieren werden Sie die Wechat&#8211;Benachrichtigung nicht mehr erhalten. Möchten Sie die Verbindung trennen, bitte gehen Sie zu Wechat und das offizielle Konto \"加菲狗官微服务\" nicht mehr folgen.</string>
     <string name="SETTINGS_Wechat_Switch_Open">Bitte konzentriere dich auf das WeChat&#8211;Konto \"加菲狗官微服务\" und binden, nach dem Erfolg des alten WeChat&#8211;Kontos wird die Meldung nicht mehr erhalten</string>
