--- a/app/src/main/res/values-pt/strings.xml
+++ b/app/src/main/res/values-pt/strings.xml
@@ -134,7 +134,6 @@
     <string name="DEVICE_OFFLINE5">Configure o WiFi para o dispositivo</string>
     <string name="DEVICE_OFFLINE6">Não há WiFi disponível</string>
     <string name="DEVICE_OFFLINE7">Conecte os hot spots do equipamento</string>
-    <string name="DEVICE_SHARE_LIMIT_TIPS">O número de limite de participação atingido</string>
     <string name="DEVICE_UPGRADE">Atualização do dispositivo</string>
     <string name="DEVICE_UPGRADE_TIPS">O dispositivo precisa ser rebote para atualizar software.</string>
     <string name="DEVICE_WIFI_ONLINE">WiFi online</string>
@@ -241,6 +240,9 @@
     <string name="EVERY_DAY">Todos os dias</string>
     <string name="EXPECT">Aguarde um instante</string>
     <string name="EXPERIENCE">Experiência</string>
+    <string name="FAQ_SINA_WEIBO">Não suporte o vídeo ao vivo do Sina Weibo</string>
+    <string name="FAQ_SINA_WEIBO_TEXT1">1, para garantir que a conta tenha a autenticação de nomes reais do Weibo Sina e não seja uma conta na lista negra.</string>
+    <string name="FAQ_SINA_WEIBO_TEXT2">2, o atual Sina Live só é compatível com o IP continental da China.</string>
     <string name="FEEDBACK">Feedback sobre o app</string>
     <string name="FEEDBACK_Copy">Cópia de</string>
     <string name="FEEDBACK_NULL">Por favor digite um comentário</string>
@@ -275,9 +277,18 @@
     <string name="H5_VR_mode">Modo VR</string>
     <string name="HOME">Página inicial</string>
     <string name="HOTSPOTS_CONNECT_TIMEOUT_TIPS">Não é possível conectar a hotspots</string>
+    <string name="HOTSPOT_CONNECT_FAILED">Falha na conexão, tente novamente</string>
+    <string name="HOTSPOT_DEFAULT">Cam&#8211;Hotspot</string>
+    <string name="HOTSPOT_DEVICE_CONNECTING">Conexão do dispositivo</string>
     <string name="HOTSPOT_NAME">Ponto de acesso: %s</string>
+    <string name="HOTSPOT_NEME_HINT">Digite um nome de ponto de acesso</string>
+    <string name="HOTSPOT_NOTAUTO_OPEN_POP">O sistema atual não suporta a abertura automática dos hot spots, quer para as \"configurações\" serem abertas manualmente?</string>
+    <string name="HOTSPOT_OPENING">Ponto de acesso de abertura</string>
+    <string name="HOTSPOT_OPEN_TIPS">Para garantir que o dispositivo funcione corretamente, abra a rede de dados móveis, sim?</string>
     <string name="HOTSPOT_PASSWORD">Digite a senha do hotspot</string>
     <string name="HOTSPOT_PASSWORD_ERROR">A senha deve conter pelo menos 8 caracteres</string>
+    <string name="HOTSPOT_PSW_HINT">Digite a senha do hotspot</string>
+    <string name="HOTSPOT_UNABLE_OPEN_POP">Temporariamente incapaz de abrir hotspots automaticamente, se o sistema vai para \"Configurações\" para abrir manualmente?</string>
     <string name="HOUR">H</string>
     <string name="HOURS">24 horas</string>
     <string name="HZ_NTSC_PAL">Activar NTSC</string>
@@ -322,9 +333,12 @@
     <string name="LIVE_ACCOUNT_BIND_TIPS">Por favor, ligue uma conta primeiro</string>
     <string name="LIVE_ACCOUNT_UNBOUND">Não consolidado</string>
     <string name="LIVE_ADDRESS_EXPIRED">O endereço ao vivo expirou</string>
+    <string name="LIVE_AUTHO_FAILED">Falha na autorização</string>
     <string name="LIVE_CHANNEL_CREATING_LOADING">Criando &#8230;</string>
+    <string name="LIVE_COPY_LINK">link de cópia</string>
     <string name="LIVE_CREATE_BUTTON">Criar ao vivo</string>
     <string name="LIVE_CREATE_FAIL_TIPS">Criar falha</string>
+    <string name="LIVE_CREATE_NEW_LIVE">Crie um novo live, invalidará o endereço atual, continuará?</string>
     <string name="LIVE_CREATE_TIPS">Crie uma transmissão ao vivo primeiro</string>
     <string name="LIVE_CREATING">Criando %s ao vivo &#8230;</string>
     <string name="LIVE_CURRENT_TEXT">Vivo atual</string>
@@ -334,6 +348,7 @@
     <string name="LIVE_DETAIL_DEL_END_TIME">Excluir o tempo de término</string>
     <string name="LIVE_DETAIL_DESCRIPTION">Descrição ao vivo</string>
     <string name="LIVE_DETAIL_TITLE">Título vivo</string>
+    <string name="LIVE_FACEBOOK_PERMISSIONS">Permissões</string>
     <string name="LIVE_FAILED">Devido a problemas de endereço ou rede, falhou ao vivo</string>
     <string name="LIVE_LANMODE_POP">Não suporte ao vivo, mude para \"Conectar&#8211;se ao WiFi\" ou \"Hotspot\"?</string>
     <string name="LIVE_NOT_OPENED_POP">A conta YouTube %s ainda não abriu o canal, não pode viver, abra e tente novamente</string>
@@ -341,12 +356,17 @@
     <string name="LIVE_PLATFORM_FACEBOOK">Facebook</string>
     <string name="LIVE_PLATFORM_WEIBO">Sina Weibo</string>
     <string name="LIVE_PLATFORM_YOUTUBE">Youtube</string>
+    <string name="LIVE_RTMP_ENTER_KEY">Digite a chave</string>
     <string name="LIVE_RTMP_HINT">rtmp://</string>
+    <string name="LIVE_SAVE_FAILED">Salvar falhou, tente novamente</string>
     <string name="LIVE_SELECT_PLATFORM">Selecione uma plataforma ao vivo</string>
+    <string name="LIVE_SINAWEIBO_UNABLE_LIVE">Esta conta está temporariamente incapaz de viver, seja para perguntas frequentes para saber mais?</string>
+    <string name="LIVE_SINAWEIBO_UNCERTIFICATED">Conta não certificada, vá para a parte inferior do micro blog clicar em \"+\" > \"ao vivo\" por etapas para completar a verificação</string>
     <string name="LIVE_SLOW_CONNECTION">Conexão lenta, não pode reproduzir vídeo ao vivo, mudar taxa ou tentar novamente em um melhor ambiente de rede.</string>
     <string name="LIVE_STOP_POP">Após a parada, o endereço ao vivo será inválido, seja para parar?</string>
     <string name="LIVE_TESTING">Testando web ao vivo &#8230;</string>
     <string name="LIVE_TIME_ERROR_TIPS">A hora de início deve ser anterior ao tempo final</string>
+    <string name="LIVE_UNABLE_UNBIND">O atual %1$s use %2$s login, temporariamente incapaz de desvincular a conta</string>
     <string name="LIVE_UNBIND_ACCOUNT">Desativar a conta %s ou não?</string>
     <string name="LOADING">Carregando&#8230;</string>
     <string name="LOCAL_NOTIFICATION_AndroidMSG">No Phone, em \"Ajustes\", \"Notificações\", ative notificações do %s</string>
@@ -606,6 +626,7 @@
     <string name="SETTING">Salvando ajustes&#8230;</string>
     <string name="SETTINGS">Ajustes</string>
     <string name="SETTINGS_1">Ajustes</string>
+    <string name="SETTINGS_HOTSPOT_CONNECTED">Hotspot está conectado</string>
     <string name="SETTINGS_MOBILE_HOTSPOT">Hotspot móvel</string>
     <string name="SETTINGS_Wechat_Switch_Cancel">Desligar não vai receber mais mensagens empurradas. Se quiser se desvincular, por favor vá ao Wechat e cancele o seguimento do número público\"加菲狗官微服务\".</string>
     <string name="SETTINGS_Wechat_Switch_Open">Concentre&#8211;se na conta WeChat \"加菲狗官微服务\" e vincule, depois que o sucesso da antiga conta WeChat não receberá mais a mensagem push</string>
