--- a/app/src/main/res/values-zh-rCN/strings.xml
+++ b/app/src/main/res/values-zh-rCN/strings.xml
@@ -134,7 +134,6 @@
     <string name="DEVICE_OFFLINE5">请给设备配置WiFi进行连接。</string>
     <string name="DEVICE_OFFLINE6">无可用WiFi</string>
     <string name="DEVICE_OFFLINE7">请直连设备热点。</string>
-    <string name="DEVICE_SHARE_LIMIT_TIPS">分享人数已达上限</string>
     <string name="DEVICE_UPGRADE">设备软件升级</string>
     <string name="DEVICE_UPGRADE_TIPS">设备软件版本较低，请重新绑定设备进行升级</string>
     <string name="DEVICE_WIFI_ONLINE">WiFi在线</string>
@@ -241,6 +240,9 @@
     <string name="EVERY_DAY">每天</string>
     <string name="EXPECT">即将推出，敬请期待</string>
     <string name="EXPERIENCE">体验</string>
+    <string name="FAQ_SINA_WEIBO">新浪微博无法直播</string>
+    <string name="FAQ_SINA_WEIBO_TEXT1">1、确保所绑定的账号已完成新浪微博的实名认证，并且不是黑名单账户。</string>
+    <string name="FAQ_SINA_WEIBO_TEXT2">2、目前微博直播只支持中国大陆地区IP直播。</string>
     <string name="FEEDBACK">意见反馈</string>
     <string name="FEEDBACK_Copy">复制</string>
     <string name="FEEDBACK_NULL">请输入反馈内容</string>
@@ -275,9 +277,18 @@
     <string name="H5_VR_mode">VR模式</string>
     <string name="HOME">主页</string>
     <string name="HOTSPOTS_CONNECT_TIMEOUT_TIPS">无法连接到热点</string>
+    <string name="HOTSPOT_CONNECT_FAILED">连接失败，请重试</string>
+    <string name="HOTSPOT_DEFAULT">Cam&#8211;Hotspot</string>
+    <string name="HOTSPOT_DEVICE_CONNECTING">等待设备连接</string>
     <string name="HOTSPOT_NAME">热点: %s</string>
+    <string name="HOTSPOT_NEME_HINT">请输入热点名称</string>
+    <string name="HOTSPOT_NOTAUTO_OPEN_POP">当前系统不支持自动开启热点，是否前往系统“设置”手动开启？</string>
+    <string name="HOTSPOT_OPENING">正在开启热点</string>
+    <string name="HOTSPOT_OPEN_TIPS">为使设备能正常运行，请先开启移动数据网络，是否已开启？</string>
     <string name="HOTSPOT_PASSWORD">请输入热点密码</string>
     <string name="HOTSPOT_PASSWORD_ERROR">密码至少8个字符</string>
+    <string name="HOTSPOT_PSW_HINT">请输入热点密码</string>
+    <string name="HOTSPOT_UNABLE_OPEN_POP">暂时无法自动开启热点，是否前往系统“设置”手动开启？</string>
     <string name="HOUR">时</string>
     <string name="HOURS">全天提示</string>
     <string name="HZ_NTSC_PAL">开启NTSC</string>
@@ -322,9 +333,12 @@
     <string name="LIVE_ACCOUNT_BIND_TIPS">请先绑定账号</string>
     <string name="LIVE_ACCOUNT_UNBOUND">未绑定</string>
     <string name="LIVE_ADDRESS_EXPIRED">直播地址已失效</string>
+    <string name="LIVE_AUTHO_FAILED">授权失败</string>
     <string name="LIVE_CHANNEL_CREATING_LOADING">正在创建&#8230;</string>
+    <string name="LIVE_COPY_LINK">复制链接</string>
     <string name="LIVE_CREATE_BUTTON">创建直播</string>
     <string name="LIVE_CREATE_FAIL_TIPS">创建失败</string>
+    <string name="LIVE_CREATE_NEW_LIVE">创建新直播，将会使当前直播地址失效，是否创建？</string>
     <string name="LIVE_CREATE_TIPS">请先创建直播</string>
     <string name="LIVE_CREATING">正在创建%s直播&#8230;</string>
     <string name="LIVE_CURRENT_TEXT">当前直播</string>
@@ -334,6 +348,7 @@
     <string name="LIVE_DETAIL_DEL_END_TIME">删除结束时间</string>
     <string name="LIVE_DETAIL_DESCRIPTION">直播描述</string>
     <string name="LIVE_DETAIL_TITLE">直播标题</string>
+    <string name="LIVE_FACEBOOK_PERMISSIONS">权限设置</string>
     <string name="LIVE_FAILED">因地址或网络问题，无法直播</string>
     <string name="LIVE_LANMODE_POP">直连时不支持直播，是否切换至“连接WiFi”或“手机热点”？</string>
     <string name="LIVE_NOT_OPENED_POP">YouTube账号 %s 尚未开通频道，无法直播，请先开通后重试</string>
@@ -341,12 +356,17 @@
     <string name="LIVE_PLATFORM_FACEBOOK">Facebook</string>
     <string name="LIVE_PLATFORM_WEIBO">新浪微博</string>
     <string name="LIVE_PLATFORM_YOUTUBE">YouTube</string>
+    <string name="LIVE_RTMP_ENTER_KEY">请输入密钥</string>
     <string name="LIVE_RTMP_HINT">rtmp://</string>
+    <string name="LIVE_SAVE_FAILED">保存失败，请重试</string>
     <string name="LIVE_SELECT_PLATFORM">选择直播平台</string>
+    <string name="LIVE_SINAWEIBO_UNABLE_LIVE">该账号暂时无法直播，是否前往FAQ了解详情？</string>
+    <string name="LIVE_SINAWEIBO_UNCERTIFICATED">账号尚未认证，请前往微博点击底部“+” > “直播”按步骤完成验证</string>
     <string name="LIVE_SLOW_CONNECTION">网速较慢，无法直播，请切换码率，或在更好的网络环境下重试。</string>
     <string name="LIVE_STOP_POP">停止后，直播地址将失效，是否停止？</string>
     <string name="LIVE_TESTING">正在测试直播网速&#8230;</string>
     <string name="LIVE_TIME_ERROR_TIPS">开始时间必须小于结束时间</string>
+    <string name="LIVE_UNABLE_UNBIND">当前%1$s使用%2$s登录，暂不能解绑该账号</string>
     <string name="LIVE_UNBIND_ACCOUNT">是否解除%s账号绑定？</string>
     <string name="LOADING">加载中&#8230;</string>
     <string name="LOCAL_NOTIFICATION_AndroidMSG">请在手机设置－通知页，找到“%s”，开启“允许通知”</string>
@@ -606,6 +626,7 @@
     <string name="SETTING">正在设置&#8230;</string>
     <string name="SETTINGS">设置</string>
     <string name="SETTINGS_1">功能设置</string>
+    <string name="SETTINGS_HOTSPOT_CONNECTED">热点已连接</string>
     <string name="SETTINGS_MOBILE_HOTSPOT">手机热点</string>
     <string name="SETTINGS_Wechat_Switch_Cancel">关闭将无法接收微信推送。想取消绑定请前往微信取消关注“加菲狗官微服务”公众号。</string>
     <string name="SETTINGS_Wechat_Switch_Open">请在新的微信号上关注“加菲狗官微服务”并绑定，成功后旧的微信号将不再接收消息推送</string>
