--- a/app/src/main/res/values-zh-rTW/strings.xml
+++ b/app/src/main/res/values-zh-rTW/strings.xml
@@ -134,7 +134,6 @@
     <string name="DEVICE_OFFLINE5">請給設備配置WiFi進行連接。</string>
     <string name="DEVICE_OFFLINE6">無可用WiFi</string>
     <string name="DEVICE_OFFLINE7">請直連設備熱點。</string>
-    <string name="DEVICE_SHARE_LIMIT_TIPS">分享人數已達上限</string>
     <string name="DEVICE_UPGRADE">設備軟體升級</string>
     <string name="DEVICE_UPGRADE_TIPS">設備軟體版本較低，請重新綁定​​設備進行升級</string>
     <string name="DEVICE_WIFI_ONLINE">WiFi已連線</string>
@@ -241,6 +240,9 @@
     <string name="EVERY_DAY">每天</string>
     <string name="EXPECT">即將推出，敬請期待</string>
     <string name="EXPERIENCE">體驗</string>
+    <string name="FAQ_SINA_WEIBO">新浪微博無法直播</string>
+    <string name="FAQ_SINA_WEIBO_TEXT1">1、確保所綁定的賬號已完成新浪微博的實名認證，並且不是黑名單賬戶。</string>
+    <string name="FAQ_SINA_WEIBO_TEXT2">2、目前微博直播只支持中國大陸地區IP直播。</string>
     <string name="FEEDBACK">意見回饋</string>
     <string name="FEEDBACK_Copy">複製</string>
     <string name="FEEDBACK_NULL">請輸入回饋內容</string>
@@ -275,9 +277,18 @@
     <string name="H5_VR_mode">小行星</string>
     <string name="HOME">主頁</string>
     <string name="HOTSPOTS_CONNECT_TIMEOUT_TIPS">無法連接到熱點</string>
+    <string name="HOTSPOT_CONNECT_FAILED">連接失敗，請重試</string>
+    <string name="HOTSPOT_DEFAULT">Cam&#8211;Hotspot</string>
+    <string name="HOTSPOT_DEVICE_CONNECTING">等待設備連接</string>
     <string name="HOTSPOT_NAME">熱點: %s</string>
+    <string name="HOTSPOT_NEME_HINT">請輸入熱點名稱</string>
+    <string name="HOTSPOT_NOTAUTO_OPEN_POP">當前系統不支持自動開啟熱點，是否前往系統“設置”手動開啟？</string>
+    <string name="HOTSPOT_OPENING">正在開啟熱點</string>
+    <string name="HOTSPOT_OPEN_TIPS">為使設備能正常運行，請先開啟移動數據網絡，是否已開啟？</string>
     <string name="HOTSPOT_PASSWORD">請輸入熱點密碼</string>
     <string name="HOTSPOT_PASSWORD_ERROR">密碼至少8個字符</string>
+    <string name="HOTSPOT_PSW_HINT">請輸入熱點密碼</string>
+    <string name="HOTSPOT_UNABLE_OPEN_POP">暫時無法自動開啟熱點，是否前往系統“設置”手動開啟？</string>
     <string name="HOUR">時</string>
     <string name="HOURS">全天提示</string>
     <string name="HZ_NTSC_PAL">開啟NTSC</string>
@@ -322,9 +333,12 @@
     <string name="LIVE_ACCOUNT_BIND_TIPS">請先綁定賬號</string>
     <string name="LIVE_ACCOUNT_UNBOUND">未綁定</string>
     <string name="LIVE_ADDRESS_EXPIRED">直播地址已失效</string>
+    <string name="LIVE_AUTHO_FAILED">授權失敗</string>
     <string name="LIVE_CHANNEL_CREATING_LOADING">正在創建&#8230;</string>
+    <string name="LIVE_COPY_LINK">複製鏈接</string>
     <string name="LIVE_CREATE_BUTTON">創建直播</string>
     <string name="LIVE_CREATE_FAIL_TIPS">創建失敗</string>
+    <string name="LIVE_CREATE_NEW_LIVE">創建新直播，將會使當前直播地址失效，是否創建？</string>
     <string name="LIVE_CREATE_TIPS">請先創建直播</string>
     <string name="LIVE_CREATING">正在創建%s直播&#8230;</string>
     <string name="LIVE_CURRENT_TEXT">當前直播</string>
@@ -334,6 +348,7 @@
     <string name="LIVE_DETAIL_DEL_END_TIME">刪除結束時間</string>
     <string name="LIVE_DETAIL_DESCRIPTION">直播描述</string>
     <string name="LIVE_DETAIL_TITLE">直播標題</string>
+    <string name="LIVE_FACEBOOK_PERMISSIONS">權限設置</string>
     <string name="LIVE_FAILED">因地址或網絡問題，無法直播</string>
     <string name="LIVE_LANMODE_POP">直連時不支持直播，是否切換至“連接WiFi”或“手機熱點”？</string>
     <string name="LIVE_NOT_OPENED_POP">YouTube賬號 %s 尚未開通頻道，無法直播，請先開通後重試</string>
@@ -341,12 +356,17 @@
     <string name="LIVE_PLATFORM_FACEBOOK">Facebook</string>
     <string name="LIVE_PLATFORM_WEIBO">新浪微博</string>
     <string name="LIVE_PLATFORM_YOUTUBE">YouTube</string>
+    <string name="LIVE_RTMP_ENTER_KEY">請輸入密鑰</string>
     <string name="LIVE_RTMP_HINT">rtmp://</string>
+    <string name="LIVE_SAVE_FAILED">保存失敗，請重試</string>
     <string name="LIVE_SELECT_PLATFORM">選擇直播平台</string>
+    <string name="LIVE_SINAWEIBO_UNABLE_LIVE">該賬號暫時無法直播，是否前往FAQ了解詳情？</string>
+    <string name="LIVE_SINAWEIBO_UNCERTIFICATED">賬號尚未認證，請前往微博點擊底部“+” > “直播”按步驟完成驗證</string>
     <string name="LIVE_SLOW_CONNECTION">網速較慢，無法直播，請切換碼率，或在更好的網絡環境下重試。</string>
     <string name="LIVE_STOP_POP">停止後，直播地址將失效，是否停止？</string>
     <string name="LIVE_TESTING">正在測試直播網速&#8230;</string>
     <string name="LIVE_TIME_ERROR_TIPS">開始時間必須小於結束時間</string>
+    <string name="LIVE_UNABLE_UNBIND">當前%1$s使用%2$s登錄，暫不能解綁該賬號</string>
     <string name="LIVE_UNBIND_ACCOUNT">是否解除%s賬號綁定？</string>
     <string name="LOADING">載入中&#8230;</string>
     <string name="LOCAL_NOTIFICATION_AndroidMSG">請在手機設定－通知頁，找到%s，開啟“允許通知”</string>
@@ -606,6 +626,7 @@
     <string name="SETTING">正在設定&#8230;</string>
     <string name="SETTINGS">設定</string>
     <string name="SETTINGS_1">功能設置</string>
+    <string name="SETTINGS_HOTSPOT_CONNECTED">熱點已連接</string>
     <string name="SETTINGS_MOBILE_HOTSPOT">手機熱點</string>
     <string name="SETTINGS_Wechat_Switch_Cancel">關閉將無法接收微信推送。想取消綁定請前往微信取消關注“加菲狗官微服务”公眾號。</string>
     <string name="SETTINGS_Wechat_Switch_Open">請在新的微信號上關注“加菲狗官微服务”並綁定，成功後舊的微信號將不再接收消息推送</string>
